--- a/02_Java_기본_문법/2.4_메서드.md
+++ b/02_Java_기본_문법/2.4_메서드.md
@@ -1,42 +1,754 @@
-# 2.4. 메서드 (Methods)
+# 2.4. 메서드
 
-Java에서 **메서드(Method)**는 특정 작업을 수행하는 코드 블록입니다. JavaScript의 **함수(Function)**와 매우 유사한 개념이지만, 한 가지 결정적인 차이가 있습니다.
+> 메서드의 개념을 이해하고, 선언과 호출, 매개변수와 반환값을 다룰 수 있다.
 
-> **Java의 모든 메서드는 반드시 클래스(Class) 내부에 정의되어야 합니다.**
+## 메서드란?
 
-JavaScript처럼 독립적으로 존재하는 함수는 만들 수 없습니다.
+**메서드(Method)**는 특정 작업을 수행하는 코드의 묶음입니다. JavaScript의 **함수(Function)**와 매우 유사하지만, Java에서는 **모든 메서드가 반드시 클래스 내부에 정의**되어야 합니다.
 
-### 메서드 정의
+**JavaScript 비교**: JavaScript는 독립적인 함수를 만들 수 있지만, Java는 클래스 안에서만 메서드를 정의할 수 있습니다.
+
+```javascript
+// JavaScript - 독립적인 함수
+function add(a, b) {
+    return a + b;
+}
+```
+
+```java
+// Java - 클래스 내부의 메서드
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+}
+```
+
+---
+
+## 메서드를 사용하는 이유
+
+### 1. 코드 재사용
+
+같은 코드를 반복해서 작성하지 않고, 한 번 정의한 메서드를 여러 곳에서 호출할 수 있습니다.
+
+```java
+// 메서드 없이
+int result1 = 10 + 20;
+int result2 = 30 + 40;
+int result3 = 50 + 60;
+
+// 메서드 사용
+int result1 = add(10, 20);
+int result2 = add(30, 40);
+int result3 = add(50, 60);
+```
+
+### 2. 코드의 구조화
+
+복잡한 작업을 작은 단위로 나누어 관리하기 쉽게 만듭니다.
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        printHeader();
+        printMenu();
+        printFooter();
+    }
+
+    public static void printHeader() {
+        System.out.println("===================");
+        System.out.println("   메뉴 시스템");
+        System.out.println("===================");
+    }
+
+    public static void printMenu() {
+        System.out.println("1. 추가");
+        System.out.println("2. 삭제");
+        System.out.println("3. 조회");
+    }
+
+    public static void printFooter() {
+        System.out.println("===================");
+    }
+}
+```
+
+### 3. 유지보수 용이
+
+코드를 수정할 때 메서드 한 곳만 고치면 됩니다.
+
+---
+
+## 메서드 정의
+
+### 기본 문법
+
+```java
+접근제어자 반환타입 메서드명(매개변수) {
+    // 메서드 내용
+    return 반환값;  // 반환타입이 void가 아닌 경우
+}
+```
+
+### 예제
+
 ```java
 public class Calculator {
     // 두 정수를 더하는 메서드
     public int add(int a, int b) {
         return a + b;
     }
-}
-```
--   `public`: 접근 제어자 (어디서든 호출 가능)
--   `int`: **반환 타입 (Return Type)**. 이 메서드는 `int` 타입의 값을 반환한다는 의미입니다. 만약 반환할 값이 없으면 `void`를 사용합니다.
--   `add`: 메서드 이름
--   `(int a, int b)`: **매개변수 (Parameters)**. 메서드가 작업을 수행하는 데 필요한 값들입니다. 반드시 타입을 명시해야 합니다.
--   `return a + b;`: 메서드의 결과값을 반환합니다. 반환 타입이 `void`가 아니면 반드시 `return` 문이 있어야 합니다.
 
-### 메서드 호출
-메서드를 호출하려면 먼저 해당 메서드가 포함된 클래스의 **객체(인스스)**를 생성해야 합니다. (`static` 메서드는 예외이며 나중에 다룹니다.)
+    // 두 정수를 빼는 메서드
+    public int subtract(int a, int b) {
+        return a - b;
+    }
 
-```java
-public class Main {
-    public static void main(String[] args) {
-        // 1. Calculator 클래스의 객체 생성
-        Calculator myCalc = new Calculator();
-
-        // 2. 객체를 통해 add 메서드 호출
-        int result = myCalc.add(10, 20);
-
-        System.out.println("결과: " + result); // 결과: 30
+    // 인사말을 출력하는 메서드 (반환값 없음)
+    public void greet(String name) {
+        System.out.println("안녕하세요, " + name + "님!");
     }
 }
 ```
 
-> **JavaScript 개발자를 위한 Tip**:
-> JavaScript에서는 함수를 변수에 할당하거나 다른 함수의 인자로 전달하는 등 함수를 값처럼 자유롭게 다룰 수 있습니다 (일급 함수). Java는 이러한 개념이 직접적으로는 없지만, 8버전부터 추가된 람다(Lambda)와 스트림(Stream) API를 통해 유사한 함수형 프로그래밍 스타일을 지원합니다.
+### 구성 요소
+
+1. **접근 제어자** (`public`, `private` 등): 메서드의 접근 범위 지정
+2. **반환 타입** (`int`, `String`, `void` 등): 메서드가 반환하는 값의 타입
+3. **메서드명**: 메서드의 이름 (camelCase 사용)
+4. **매개변수 목록**: 메서드에 전달할 값들
+5. **메서드 본문**: 실행할 코드
+
+---
+
+## 반환 타입 (Return Type)
+
+메서드가 반환하는 값의 타입을 지정합니다.
+
+### void - 반환값 없음
+
+```java
+public void printMessage(String message) {
+    System.out.println(message);
+    // return 문 없음 (또는 return; 만 사용 가능)
+}
+```
+
+### 기본형 반환
+
+```java
+public int getAge() {
+    return 25;
+}
+
+public double getPI() {
+    return 3.14159;
+}
+
+public boolean isAdult(int age) {
+    return age >= 18;
+}
+```
+
+### 참조형 반환
+
+```java
+public String getName() {
+    return "홍길동";
+}
+
+public int[] getNumbers() {
+    return new int[]{1, 2, 3, 4, 5};
+}
+```
+
+### return 문
+
+- **반환 타입이 void가 아닌 경우**: 반드시 `return` 문이 있어야 함
+- **반환 타입과 return 값의 타입 일치**: 타입이 맞지 않으면 컴파일 에러
+
+```java
+public int add(int a, int b) {
+    return a + b;  // int 타입 반환
+    // return "result";  // 에러! String을 반환할 수 없음
+}
+
+public void printHello() {
+    System.out.println("Hello");
+    return;  // void 메서드는 return; 또는 생략 가능
+}
+```
+
+---
+
+## 매개변수 (Parameters)
+
+메서드에 전달하는 값을 정의합니다.
+
+### 매개변수 없음
+
+```java
+public void sayHello() {
+    System.out.println("Hello!");
+}
+
+// 호출
+sayHello();
+```
+
+### 단일 매개변수
+
+```java
+public void greet(String name) {
+    System.out.println("안녕하세요, " + name + "님!");
+}
+
+// 호출
+greet("홍길동");  // 안녕하세요, 홍길동님!
+```
+
+### 여러 매개변수
+
+```java
+public int add(int a, int b) {
+    return a + b;
+}
+
+public void printInfo(String name, int age, String city) {
+    System.out.println("이름: " + name);
+    System.out.println("나이: " + age);
+    System.out.println("도시: " + city);
+}
+
+// 호출
+int result = add(10, 20);
+printInfo("홍길동", 25, "서울");
+```
+
+### 매개변수 타입 명시 필수
+
+Java는 정적 타입 언어이므로 매개변수의 타입을 반드시 명시해야 합니다.
+
+```java
+// Java
+public int add(int a, int b) {  // 타입 명시 필수
+    return a + b;
+}
+```
+
+**JavaScript 비교**:
+
+```javascript
+// JavaScript - 타입 명시 불필요
+function add(a, b) {
+    return a + b;
+}
+```
+
+---
+
+## 메서드 호출
+
+### 인스턴스 메서드 호출
+
+객체를 생성한 후 호출합니다.
+
+```java
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        // 1. 객체 생성
+        Calculator calc = new Calculator();
+
+        // 2. 메서드 호출
+        int result = calc.add(10, 20);
+        System.out.println(result);  // 30
+    }
+}
+```
+
+### static 메서드 호출
+
+객체 생성 없이 클래스 이름으로 직접 호출합니다.
+
+```java
+public class MathUtil {
+    public static int add(int a, int b) {
+        return a + b;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        // 객체 생성 없이 클래스명으로 호출
+        int result = MathUtil.add(10, 20);
+        System.out.println(result);  // 30
+    }
+}
+```
+
+### main 메서드
+
+Java 프로그램의 시작점인 `main` 메서드도 static 메서드입니다.
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        // 프로그램 시작
+        System.out.println("Hello, World!");
+    }
+}
+```
+
+---
+
+## 메서드 오버로딩 (Overloading)
+
+**메서드 오버로딩**은 같은 이름의 메서드를 여러 개 정의하는 것입니다. 매개변수의 **개수** 또는 **타입**이 달라야 합니다.
+
+### 기본 예제
+
+```java
+public class Calculator {
+    // 두 개의 int 매개변수
+    public int add(int a, int b) {
+        return a + b;
+    }
+
+    // 세 개의 int 매개변수
+    public int add(int a, int b, int c) {
+        return a + b + c;
+    }
+
+    // 두 개의 double 매개변수
+    public double add(double a, double b) {
+        return a + b;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Calculator calc = new Calculator();
+
+        System.out.println(calc.add(10, 20));          // 30
+        System.out.println(calc.add(10, 20, 30));      // 60
+        System.out.println(calc.add(10.5, 20.5));      // 31.0
+    }
+}
+```
+
+### 오버로딩 조건
+
+**가능한 경우**:
+- 매개변수 개수가 다른 경우
+- 매개변수 타입이 다른 경우
+- 매개변수 개수와 타입이 모두 다른 경우
+
+**불가능한 경우**:
+- 반환 타입만 다른 경우
+- 매개변수 이름만 다른 경우
+
+```java
+// ✅ 가능
+public int add(int a, int b) { }
+public int add(int a, int b, int c) { }
+public double add(double a, double b) { }
+
+// ❌ 불가능 (반환 타입만 다름)
+public int add(int a, int b) { }
+public double add(int a, int b) { }  // 컴파일 에러!
+
+// ❌ 불가능 (매개변수 이름만 다름)
+public int add(int a, int b) { }
+public int add(int x, int y) { }  // 컴파일 에러!
+```
+
+### 실전 예제
+
+```java
+public class Printer {
+    public void print(int value) {
+        System.out.println("정수: " + value);
+    }
+
+    public void print(double value) {
+        System.out.println("실수: " + value);
+    }
+
+    public void print(String value) {
+        System.out.println("문자열: " + value);
+    }
+
+    public void print(boolean value) {
+        System.out.println("논리값: " + value);
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Printer printer = new Printer();
+
+        printer.print(100);          // 정수: 100
+        printer.print(3.14);         // 실수: 3.14
+        printer.print("Hello");      // 문자열: Hello
+        printer.print(true);         // 논리값: true
+    }
+}
+```
+
+**JavaScript 비교**: JavaScript는 오버로딩을 지원하지 않습니다. 같은 이름의 함수를 여러 번 선언하면 마지막 것만 유효합니다.
+
+---
+
+## 가변 인자 (Varargs)
+
+매개변수의 개수를 가변적으로 받을 수 있습니다.
+
+### 문법
+
+```java
+public 반환타입 메서드명(타입... 변수명) {
+    // 변수명은 배열처럼 사용
+}
+```
+
+### 예제
+
+```java
+public class Calculator {
+    // 가변 인자로 여러 개의 정수를 받아 합계 계산
+    public int sum(int... numbers) {
+        int total = 0;
+        for (int num : numbers) {
+            total += num;
+        }
+        return total;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Calculator calc = new Calculator();
+
+        System.out.println(calc.sum(1, 2));           // 3
+        System.out.println(calc.sum(1, 2, 3));        // 6
+        System.out.println(calc.sum(1, 2, 3, 4, 5)); // 15
+        System.out.println(calc.sum());               // 0 (인자 없음)
+    }
+}
+```
+
+### 주의사항
+
+1. **가변 인자는 매개변수 목록의 마지막에만 위치**
+
+```java
+// ✅ 가능
+public void method(String name, int... numbers) { }
+
+// ❌ 불가능
+public void method(int... numbers, String name) { }  // 컴파일 에러!
+```
+
+2. **가변 인자는 하나만 사용 가능**
+
+```java
+// ❌ 불가능
+public void method(int... numbers1, String... names) { }  // 컴파일 에러!
+```
+
+**JavaScript 비교**: JavaScript의 rest parameter(`...args`)와 유사합니다.
+
+```javascript
+// JavaScript
+function sum(...numbers) {
+    return numbers.reduce((a, b) => a + b, 0);
+}
+
+console.log(sum(1, 2, 3, 4, 5));  // 15
+```
+
+---
+
+## 재귀 메서드 (Recursive Method)
+
+메서드가 자기 자신을 호출하는 것을 **재귀(Recursion)**라고 합니다.
+
+### 팩토리얼 예제
+
+```java
+public class MathUtil {
+    // 재귀를 사용한 팩토리얼
+    public static int factorial(int n) {
+        if (n <= 1) {
+            return 1;  // 기저 조건 (base case)
+        }
+        return n * factorial(n - 1);  // 재귀 호출
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        System.out.println(factorial(5));  // 120 (5 * 4 * 3 * 2 * 1)
+    }
+}
+```
+
+### 피보나치 수열
+
+```java
+public class MathUtil {
+    public static int fibonacci(int n) {
+        if (n <= 1) {
+            return n;  // 기저 조건
+        }
+        return fibonacci(n - 1) + fibonacci(n - 2);  // 재귀 호출
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        for (int i = 0; i < 10; i++) {
+            System.out.print(fibonacci(i) + " ");
+        }
+        // 출력: 0 1 1 2 3 5 8 13 21 34
+    }
+}
+```
+
+### 주의사항
+
+재귀는 **기저 조건(base case)**이 반드시 있어야 합니다. 그렇지 않으면 무한 호출로 **StackOverflowError**가 발생합니다.
+
+```java
+// ❌ 위험한 코드 (기저 조건 없음)
+public static void infiniteRecursion() {
+    infiniteRecursion();  // 무한 재귀!
+}
+```
+
+**JavaScript 비교**: JavaScript와 동일하게 동작합니다.
+
+---
+
+## 메서드와 변수 스코프
+
+### 지역 변수 (Local Variable)
+
+메서드 내부에서 선언된 변수는 **지역 변수**로, 메서드 내부에서만 사용할 수 있습니다.
+
+```java
+public class Example {
+    public void method1() {
+        int x = 10;  // method1의 지역 변수
+        System.out.println(x);
+    }
+
+    public void method2() {
+        // System.out.println(x);  // 에러! x는 method1의 지역 변수
+        int x = 20;  // method2의 지역 변수 (method1의 x와 다른 변수)
+        System.out.println(x);
+    }
+}
+```
+
+### 매개변수도 지역 변수
+
+```java
+public void greet(String name) {
+    // name은 이 메서드 내부에서만 유효
+    System.out.println("Hello, " + name);
+}
+```
+
+---
+
+## 실전 예제
+
+### 예제 1: 계산기 클래스
+
+```java
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+
+    public int subtract(int a, int b) {
+        return a - b;
+    }
+
+    public int multiply(int a, int b) {
+        return a * b;
+    }
+
+    public double divide(int a, int b) {
+        if (b == 0) {
+            System.out.println("0으로 나눌 수 없습니다.");
+            return 0;
+        }
+        return (double) a / b;
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Calculator calc = new Calculator();
+
+        System.out.println("10 + 5 = " + calc.add(10, 5));
+        System.out.println("10 - 5 = " + calc.subtract(10, 5));
+        System.out.println("10 * 5 = " + calc.multiply(10, 5));
+        System.out.println("10 / 5 = " + calc.divide(10, 5));
+    }
+}
+```
+
+### 예제 2: 문자열 유틸리티
+
+```java
+public class StringUtil {
+    // 문자열이 비어있는지 확인
+    public static boolean isEmpty(String str) {
+        return str == null || str.trim().isEmpty();
+    }
+
+    // 문자열 반복
+    public static String repeat(String str, int count) {
+        StringBuilder result = new StringBuilder();
+        for (int i = 0; i < count; i++) {
+            result.append(str);
+        }
+        return result.toString();
+    }
+
+    // 첫 글자를 대문자로
+    public static String capitalize(String str) {
+        if (isEmpty(str)) {
+            return str;
+        }
+        return str.substring(0, 1).toUpperCase() + str.substring(1);
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        System.out.println(StringUtil.isEmpty(""));      // true
+        System.out.println(StringUtil.isEmpty("hello")); // false
+        System.out.println(StringUtil.repeat("*", 5));   // *****
+        System.out.println(StringUtil.capitalize("hello")); // Hello
+    }
+}
+```
+
+---
+
+## 실습 문제
+
+### 문제 1: 최대값 찾기
+
+세 개의 정수 중 최대값을 반환하는 `max` 메서드를 작성하세요.
+
+```java
+public static int max(int a, int b, int c) {
+    // 여기에 코드 작성
+}
+
+// 테스트
+System.out.println(max(10, 20, 15));  // 20
+```
+
+### 문제 2: 짝수 판별
+
+정수가 짝수인지 판별하는 `isEven` 메서드를 작성하세요.
+
+```java
+public static boolean isEven(int num) {
+    // 여기에 코드 작성
+}
+
+// 테스트
+System.out.println(isEven(10));  // true
+System.out.println(isEven(7));   // false
+```
+
+### 문제 3: 배열의 합계
+
+정수 배열을 받아 모든 요소의 합을 반환하는 `sum` 메서드를 작성하세요.
+
+```java
+public static int sum(int[] numbers) {
+    // 여기에 코드 작성
+}
+
+// 테스트
+int[] arr = {1, 2, 3, 4, 5};
+System.out.println(sum(arr));  // 15
+```
+
+### 문제 4: 거듭제곱 (재귀)
+
+재귀를 사용하여 `base`의 `exponent` 제곱을 계산하는 `power` 메서드를 작성하세요.
+
+```java
+public static int power(int base, int exponent) {
+    // 여기에 재귀 코드 작성
+}
+
+// 테스트
+System.out.println(power(2, 3));  // 8 (2^3)
+System.out.println(power(5, 2));  // 25 (5^2)
+```
+
+### 문제 5: 평균 계산 (가변 인자)
+
+가변 인자를 사용하여 여러 정수의 평균을 계산하는 `average` 메서드를 작성하세요.
+
+```java
+public static double average(int... numbers) {
+    // 여기에 코드 작성
+}
+
+// 테스트
+System.out.println(average(10, 20, 30));        // 20.0
+System.out.println(average(5, 10, 15, 20, 25)); // 15.0
+```
+
+---
+
+## 요약
+
+- **메서드**: 특정 작업을 수행하는 코드의 묶음
+  - JavaScript의 함수와 유사하지만 클래스 내부에만 정의
+- **메서드 정의**: `접근제어자 반환타입 메서드명(매개변수) { }`
+- **반환 타입**:
+  - `void`: 반환값 없음
+  - 기본형/참조형: 해당 타입의 값 반환
+  - `return` 문 필수 (void 제외)
+- **매개변수**:
+  - 타입 명시 필수
+  - 여러 개 가능
+  - 가변 인자(`타입... 변수명`) 지원
+- **메서드 호출**:
+  - 인스턴스 메서드: 객체 생성 후 호출
+  - static 메서드: 클래스명으로 직접 호출
+- **메서드 오버로딩**:
+  - 같은 이름, 다른 매개변수
+  - 매개변수 개수 또는 타입이 달라야 함
+  - 반환 타입만 다르면 불가
+- **재귀 메서드**:
+  - 메서드가 자기 자신을 호출
+  - 기저 조건 필수 (무한 호출 방지)
+- **변수 스코프**:
+  - 지역 변수: 메서드 내부에서만 유효
+  - 매개변수도 지역 변수
+
+**JavaScript와의 주요 차이점**:
+- Java: 모든 메서드는 클래스 내부에 정의
+- Java: 매개변수와 반환 타입 명시 필수
+- Java: 메서드 오버로딩 지원
+- JavaScript: 독립적인 함수 정의 가능, 타입 명시 불필요
