--- a/02_Java_기본_문법/2.2_연산자.md
+++ b/02_Java_기본_문법/2.2_연산자.md
@@ -1,15 +1,591 @@
-# 2.2. 연산자 (Operators)
+# 2.2. 연산자
 
-Java의 연산자는 JavaScript의 연산자와 거의 100% 동일합니다.
+> Java의 다양한 연산자를 이해하고, 올바르게 사용할 수 있다.
 
--   **산술 연산자**: `+`, `-`, `*`, `/`, `%` (나머지)
--   **대입 연산자**: `=`, `+=`, `-=`, `*=`, `/=`, `%=`
--   **증감 연산자**: `++`, `--`
--   **비교 연산자**: `==`, `!=`, `>`, `<`, `>=`, `<=`
--   **논리 연산자**: `&&` (AND), `||` (OR), `!` (NOT)
--   **삼항 연산자**: `(조건) ? 값1 : 값2`
+## 연산자란?
 
-> **JavaScript 개발자를 위한 Tip**:
-> JavaScript의 `===` (엄격한 동등 비교)는 Java에 없습니다. Java는 정적 타입 언어이므로 애초에 타입이 다른 값끼리의 비교는 대부분 컴파일 에러를 발생시키거나, 명시적인 형 변환이 필요합니다.
->
-> `==` 연산자는 기본형 타입에서는 **값**을 비교하고, 참조형 타입에서는 **메모리 주소(참조)**를 비교합니다. 예를 들어, `new String("hello") == new String("hello")`는 `false`입니다. 왜냐하면 두 객체는 서로 다른 메모리 공간에 할당되어 있기 때문입니다. 참조형 객체의 내용(값)을 비교할 때는 `.equals()` 메서드를 사용해야 합니다.
+**연산자(Operator)**는 값을 계산하거나 비교, 논리적 판단을 수행하는 기호입니다. Java의 연산자는 JavaScript와 매우 유사하지만, 몇 가지 중요한 차이점이 있습니다.
+
+---
+
+## 1. 산술 연산자
+
+수학적 계산을 수행하는 연산자입니다.
+
+| 연산자 | 의미 | 예시 | 결과 |
+|:---:|:---|:---|:---|
+| `+` | 덧셈 | `10 + 3` | `13` |
+| `-` | 뺄셈 | `10 - 3` | `7` |
+| `*` | 곱셈 | `10 * 3` | `30` |
+| `/` | 나눗셈 | `10 / 3` | `3` (정수 나눗셈) |
+| `%` | 나머지 | `10 % 3` | `1` |
+
+### 기본 예제
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        int a = 10;
+        int b = 3;
+
+        System.out.println("덧셈: " + (a + b));  // 13
+        System.out.println("뺄셈: " + (a - b));  // 7
+        System.out.println("곱셈: " + (a * b));  // 30
+        System.out.println("나눗셈: " + (a / b));  // 3
+        System.out.println("나머지: " + (a % b));  // 1
+    }
+}
+```
+
+### 정수 나눗셈 주의!
+
+Java에서 **정수끼리 나눗셈하면 결과도 정수**입니다. 소수점은 버려집니다.
+
+```java
+int result1 = 10 / 3;       // 3 (소수점 버림)
+double result2 = 10 / 3;    // 3.0 (정수 나눗셈 후 double 변환)
+double result3 = 10.0 / 3;  // 3.3333... (실수 나눗셈)
+double result4 = (double) 10 / 3;  // 3.3333... (형 변환 후 나눗셈)
+
+System.out.println(result1);  // 3
+System.out.println(result2);  // 3.0
+System.out.println(result3);  // 3.3333333333333335
+System.out.println(result4);  // 3.3333333333333335
+```
+
+**JavaScript 비교**: JavaScript는 모든 숫자가 실수로 처리됩니다.
+
+```javascript
+console.log(10 / 3);  // 3.3333333333333335
+```
+
+### 문자열 연결 (+)
+
+`+` 연산자는 문자열 연결에도 사용됩니다.
+
+```java
+String name = "홍길동";
+int age = 25;
+
+System.out.println("이름: " + name);  // 이름: 홍길동
+System.out.println("나이: " + age);   // 나이: 25
+System.out.println(name + "의 나이는 " + age + "세입니다.");
+```
+
+**주의**: 연산 순서에 따라 결과가 달라질 수 있습니다.
+
+```java
+System.out.println(1 + 2);        // 3 (산술 연산)
+System.out.println("1" + 2);      // "12" (문자열 연결)
+System.out.println(1 + 2 + "3");  // "33" (1+2=3, 3+"3"="33")
+System.out.println("1" + 2 + 3);  // "123" ("1"+2="12", "12"+3="123")
+System.out.println("1" + (2 + 3)); // "15" (괄호 우선)
+```
+
+---
+
+## 2. 대입 연산자
+
+변수에 값을 할당하는 연산자입니다.
+
+| 연산자 | 의미 | 예시 | 동일한 표현 |
+|:---:|:---|:---|:---|
+| `=` | 대입 | `a = 10` | - |
+| `+=` | 더한 후 대입 | `a += 5` | `a = a + 5` |
+| `-=` | 뺀 후 대입 | `a -= 5` | `a = a - 5` |
+| `*=` | 곱한 후 대입 | `a *= 5` | `a = a * 5` |
+| `/=` | 나눈 후 대입 | `a /= 5` | `a = a / 5` |
+| `%=` | 나머지 후 대입 | `a %= 5` | `a = a % 5` |
+
+### 예제
+
+```java
+int num = 10;
+
+num += 5;  // num = num + 5
+System.out.println(num);  // 15
+
+num -= 3;  // num = num - 3
+System.out.println(num);  // 12
+
+num *= 2;  // num = num * 2
+System.out.println(num);  // 24
+
+num /= 4;  // num = num / 4
+System.out.println(num);  // 6
+
+num %= 4;  // num = num % 4
+System.out.println(num);  // 2
+```
+
+**JavaScript 비교**: JavaScript와 완전히 동일합니다.
+
+---
+
+## 3. 증감 연산자
+
+변수의 값을 1 증가시키거나 감소시키는 연산자입니다.
+
+| 연산자 | 의미 | 예시 |
+|:---:|:---|:---|
+| `++` | 1 증가 (증가 연산자) | `++a` 또는 `a++` |
+| `--` | 1 감소 (감소 연산자) | `--a` 또는 `a--` |
+
+### 전위 연산자 vs 후위 연산자
+
+```java
+int a = 5;
+int b = 5;
+
+System.out.println(++a);  // 6 (먼저 증가, 후 출력)
+System.out.println(b++);  // 5 (먼저 출력, 후 증가)
+System.out.println(b);    // 6
+```
+
+**전위 연산자 (`++a`)**: 먼저 증가한 후 값을 사용
+**후위 연산자 (`a++`)**: 먼저 값을 사용한 후 증가
+
+### 상세 예제
+
+```java
+int x = 10;
+int y = ++x;  // x를 먼저 11로 증가, 그 후 y에 11 대입
+System.out.println("x: " + x + ", y: " + y);  // x: 11, y: 11
+
+int a = 10;
+int b = a++;  // a의 현재 값 10을 b에 대입, 그 후 a를 11로 증가
+System.out.println("a: " + a + ", b: " + b);  // a: 11, b: 10
+```
+
+### 실전 사용
+
+```java
+int count = 0;
+
+count++;  // count를 1 증가
+count++;
+count++;
+System.out.println("count: " + count);  // 3
+
+count--;  // count를 1 감소
+System.out.println("count: " + count);  // 2
+```
+
+**권장**: 복잡한 표현식에서는 전위/후위를 섞어 쓰지 말고, 단순하게 사용하세요.
+
+```java
+// 나쁜 예 (헷갈림)
+int result = ++x + y++;
+
+// 좋은 예 (명확함)
+++x;
+result = x + y;
+y++;
+```
+
+---
+
+## 4. 비교 연산자
+
+두 값을 비교하여 `true` 또는 `false`를 반환하는 연산자입니다.
+
+| 연산자 | 의미 | 예시 | 결과 |
+|:---:|:---|:---|:---|
+| `==` | 같다 | `5 == 5` | `true` |
+| `!=` | 같지 않다 | `5 != 3` | `true` |
+| `>` | 크다 | `5 > 3` | `true` |
+| `<` | 작다 | `5 < 3` | `false` |
+| `>=` | 크거나 같다 | `5 >= 5` | `true` |
+| `<=` | 작거나 같다 | `5 <= 3` | `false` |
+
+### 예제
+
+```java
+int a = 10;
+int b = 20;
+
+System.out.println(a == b);  // false
+System.out.println(a != b);  // true
+System.out.println(a > b);   // false
+System.out.println(a < b);   // true
+System.out.println(a >= 10); // true
+System.out.println(a <= 5);  // false
+```
+
+### == vs equals()
+
+**기본형**: `==` 사용 (값 비교)
+
+```java
+int x = 10;
+int y = 10;
+System.out.println(x == y);  // true
+```
+
+**참조형**: `equals()` 사용 (내용 비교)
+
+```java
+String str1 = new String("Hello");
+String str2 = new String("Hello");
+
+System.out.println(str1 == str2);      // false (다른 객체)
+System.out.println(str1.equals(str2)); // true (내용이 같음)
+```
+
+**JavaScript 비교**: JavaScript는 `===` (엄격한 동등)와 `==` (느슨한 동등)를 구분합니다.
+
+```javascript
+// JavaScript
+console.log(5 == "5");   // true (타입 변환 후 비교)
+console.log(5 === "5");  // false (타입까지 비교)
+```
+
+Java는 정적 타입 언어이므로 `===` 같은 연산자가 필요 없습니다. 타입이 다르면 컴파일 에러가 발생합니다.
+
+```java
+// int num = 5;
+// System.out.println(num == "5");  // 컴파일 에러! 타입 불일치
+```
+
+---
+
+## 5. 논리 연산자
+
+논리 값(`true`/`false`)을 결합하는 연산자입니다.
+
+| 연산자 | 의미 | 설명 |
+|:---:|:---|:---|
+| `&&` | AND (그리고) | 모두 참이면 참 |
+| `||` | OR (또는) | 하나라도 참이면 참 |
+| `!` | NOT (부정) | 참↔거짓 반전 |
+
+### 진리표
+
+**AND (`&&`)**:
+| A | B | A && B |
+|:---:|:---:|:---:|
+| true | true | true |
+| true | false | false |
+| false | true | false |
+| false | false | false |
+
+**OR (`||`)**:
+| A | B | A \|\| B |
+|:---:|:---:|:---:|
+| true | true | true |
+| true | false | true |
+| false | true | true |
+| false | false | false |
+
+**NOT (`!`)**:
+| A | !A |
+|:---:|:---:|
+| true | false |
+| false | true |
+
+### 예제
+
+```java
+int age = 25;
+boolean hasLicense = true;
+
+// AND: 나이가 18세 이상이고, 면허가 있으면
+if (age >= 18 && hasLicense) {
+    System.out.println("운전 가능");
+}
+
+// OR: 학생이거나 65세 이상이면 할인
+boolean isStudent = false;
+if (isStudent || age >= 65) {
+    System.out.println("할인 적용");
+} else {
+    System.out.println("정상 가격");
+}
+
+// NOT: 비활성화 상태가 아니면
+boolean isActive = true;
+if (!isActive) {
+    System.out.println("비활성 상태");
+} else {
+    System.out.println("활성 상태");
+}
+```
+
+### 단락 평가 (Short-circuit Evaluation)
+
+Java는 **단락 평가**를 지원합니다. 즉, 결과가 확정되면 나머지 조건을 평가하지 않습니다.
+
+```java
+int x = 5;
+
+// && 연산: 첫 번째 조건이 false면 두 번째 조건 평가 안 함
+if (x > 10 && ++x > 0) {
+    System.out.println("실행 안 됨");
+}
+System.out.println(x);  // 5 (x가 증가하지 않음)
+
+// || 연산: 첫 번째 조건이 true면 두 번째 조건 평가 안 함
+int y = 5;
+if (y < 10 || ++y > 0) {
+    System.out.println("실행됨");
+}
+System.out.println(y);  // 5 (y가 증가하지 않음)
+```
+
+**활용 예시** (null 체크):
+
+```java
+String name = null;
+
+// 단락 평가 덕분에 NullPointerException 방지
+if (name != null && name.length() > 0) {
+    System.out.println("이름: " + name);
+}
+```
+
+**JavaScript 비교**: JavaScript도 단락 평가를 지원하며, 동일하게 동작합니다.
+
+---
+
+## 6. 삼항 연산자
+
+조건에 따라 값을 선택하는 간결한 연산자입니다.
+
+### 문법
+
+```java
+(조건식) ? 값1 : 값2
+```
+
+- 조건식이 `true`면 `값1` 반환
+- 조건식이 `false`면 `값2` 반환
+
+### 예제
+
+```java
+int age = 20;
+String result = (age >= 18) ? "성인" : "미성년자";
+System.out.println(result);  // 성인
+
+int num = 10;
+String type = (num % 2 == 0) ? "짝수" : "홀수";
+System.out.println(type);  // 짝수
+
+// 최대값 구하기
+int a = 10, b = 20;
+int max = (a > b) ? a : b;
+System.out.println("최대값: " + max);  // 20
+```
+
+### if-else와 비교
+
+```java
+// 삼항 연산자
+int score = 85;
+String grade = (score >= 90) ? "A" : "B";
+
+// 동일한 if-else
+String grade;
+if (score >= 90) {
+    grade = "A";
+} else {
+    grade = "B";
+}
+```
+
+**언제 사용하나?**
+- 간단한 조건 분기
+- 값을 선택하여 반환하는 경우
+
+**주의**: 복잡한 로직에는 if-else 사용을 권장합니다.
+
+```java
+// 나쁜 예 (가독성 떨어짐)
+String result = (score >= 90) ? "A" : (score >= 80) ? "B" : (score >= 70) ? "C" : "F";
+
+// 좋은 예 (if-else 사용)
+String result;
+if (score >= 90) {
+    result = "A";
+} else if (score >= 80) {
+    result = "B";
+} else if (score >= 70) {
+    result = "C";
+} else {
+    result = "F";
+}
+```
+
+**JavaScript 비교**: JavaScript와 완전히 동일합니다.
+
+---
+
+## 7. 비트 연산자
+
+비트 단위로 연산하는 연산자입니다. (고급 주제)
+
+| 연산자 | 의미 | 예시 |
+|:---:|:---|:---|
+| `&` | AND | `5 & 3` → `1` |
+| `|` | OR | `5 | 3` → `7` |
+| `^` | XOR | `5 ^ 3` → `6` |
+| `~` | NOT | `~5` → `-6` |
+| `<<` | 왼쪽 시프트 | `5 << 1` → `10` |
+| `>>` | 오른쪽 시프트 | `5 >> 1` → `2` |
+| `>>>` | 부호 없는 오른쪽 시프트 | `5 >>> 1` → `2` |
+
+### 간단한 예제
+
+```java
+int a = 5;  // 0101 (2진수)
+int b = 3;  // 0011 (2진수)
+
+System.out.println(a & b);   // 1 (0001)
+System.out.println(a | b);   // 7 (0111)
+System.out.println(a ^ b);   // 6 (0110)
+System.out.println(a << 1);  // 10 (1010)
+System.out.println(a >> 1);  // 2 (0010)
+```
+
+**참고**: 일반적인 애플리케이션 개발에서는 비트 연산자를 자주 사용하지 않습니다. 주로 저수준 프로그래밍이나 성능 최적화 시 사용합니다.
+
+---
+
+## 8. instanceof 연산자
+
+객체의 타입을 확인하는 연산자입니다. (4장에서 자세히 다룹니다)
+
+```java
+String text = "Hello";
+
+if (text instanceof String) {
+    System.out.println("text는 String 타입입니다.");
+}
+```
+
+---
+
+## 연산자 우선순위
+
+연산자마다 우선순위가 다릅니다. 헷갈릴 때는 **괄호 `()`**를 사용하세요!
+
+| 우선순위 | 연산자 |
+|:---:|:---|
+| 높음 | `++`, `--`, `!`, `~` |
+| ↓ | `*`, `/`, `%` |
+| ↓ | `+`, `-` |
+| ↓ | `<<`, `>>`, `>>>` |
+| ↓ | `<`, `<=`, `>`, `>=`, `instanceof` |
+| ↓ | `==`, `!=` |
+| ↓ | `&` |
+| ↓ | `^` |
+| ↓ | `|` |
+| ↓ | `&&` |
+| ↓ | `||` |
+| ↓ | `? :` (삼항 연산자) |
+| 낮음 | `=`, `+=`, `-=`, `*=`, `/=`, `%=` |
+
+### 예제
+
+```java
+int result = 10 + 20 * 3;
+System.out.println(result);  // 70 (곱셈이 먼저)
+
+int result2 = (10 + 20) * 3;
+System.out.println(result2);  // 90 (괄호가 먼저)
+
+boolean flag = 10 > 5 && 20 < 30;
+System.out.println(flag);  // true
+```
+
+**권장**: 복잡한 식에서는 괄호를 적극 활용하여 의도를 명확히 하세요!
+
+---
+
+## 실습 문제
+
+### 문제 1: 계산기
+
+두 정수 `a`와 `b`를 입력받아 사칙연산 결과를 출력하는 프로그램을 작성하세요.
+
+```java
+int a = 17;
+int b = 5;
+
+// 여기에 코드 작성
+```
+
+**예상 출력**:
+```
+덧셈: 22
+뺄셈: 12
+곱셈: 85
+나눗셈: 3
+나머지: 2
+```
+
+### 문제 2: 짝수/홀수 판별
+
+정수를 입력받아 짝수인지 홀수인지 판별하는 프로그램을 삼항 연산자로 작성하세요.
+
+```java
+int num = 7;
+String result = // 여기에 삼항 연산자 사용
+System.out.println(result);
+```
+
+**예상 출력**: `홀수`
+
+### 문제 3: 윤년 판별
+
+년도를 입력받아 윤년인지 판별하는 프로그램을 작성하세요.
+
+**윤년 조건**:
+- 4로 나누어 떨어지고
+- 100으로 나누어 떨어지지 않거나
+- 400으로 나누어 떨어지는 해
+
+```java
+int year = 2024;
+boolean isLeapYear = // 여기에 논리 연산자 사용
+System.out.println(isLeapYear);
+```
+
+**예상 출력**: `true`
+
+### 문제 4: 절댓값 구하기
+
+정수의 절댓값을 구하는 프로그램을 삼항 연산자로 작성하세요. (Math.abs() 사용 금지)
+
+```java
+int num = -15;
+int abs = // 여기에 코드 작성
+System.out.println(abs);
+```
+
+**예상 출력**: `15`
+
+---
+
+## 요약
+
+- **산술 연산자**: `+`, `-`, `*`, `/`, `%`
+  - 정수 나눗셈 주의: `10 / 3` = `3`
+- **대입 연산자**: `=`, `+=`, `-=`, `*=`, `/=`, `%=`
+- **증감 연산자**: `++`, `--`
+  - 전위: 먼저 증가/감소 후 사용
+  - 후위: 먼저 사용 후 증가/감소
+- **비교 연산자**: `==`, `!=`, `>`, `<`, `>=`, `<=`
+  - 기본형: `==` 사용
+  - 참조형: `equals()` 사용
+- **논리 연산자**: `&&`, `||`, `!`
+  - 단락 평가 지원
+- **삼항 연산자**: `(조건) ? 값1 : 값2`
+- **비트 연산자**: `&`, `|`, `^`, `~`, `<<`, `>>`, `>>>`
+- **instanceof**: 타입 확인
+- **우선순위**: 헷갈리면 괄호 사용!
+
+**JavaScript와의 주요 차이점**:
+- Java는 `===` 연산자가 없음 (정적 타입이라 불필요)
+- Java는 정수 나눗셈 시 소수점 버림
+- Java는 참조형 비교 시 `equals()` 사용 필요
