--- a/02_Java_기본_문법/2.3_제어문.md
+++ b/02_Java_기본_문법/2.3_제어문.md
@@ -1,22 +1,217 @@
-# 2.3. 제어문 (Control Flow)
+# 2.3. 제어문
 
-제어문은 코드의 실행 흐름을 제어하는 데 사용됩니다. `if-else`, `switch`, `for`, `while` 등 제어문 역시 JavaScript와 문법이 완전히 동일하여 쉽게 적응할 수 있습니다.
+> 제어문을 사용하여 프로그램의 실행 흐름을 제어할 수 있다.
 
-### `if-else`
+## 제어문이란?
+
+**제어문(Control Flow)**은 프로그램의 실행 순서를 제어하는 구문입니다. 조건에 따라 코드를 실행하거나, 반복 실행할 수 있습니다.
+
+**JavaScript 비교**: Java의 제어문은 JavaScript와 거의 동일합니다.
+
+---
+
+## 1. 조건문 (if, else if, else)
+
+조건에 따라 코드를 실행하거나 건너뛸 수 있습니다.
+
+### 기본 문법
+
+```java
+if (조건식) {
+    // 조건식이 true일 때 실행
+}
+```
+
+### if 문
+
+```java
+int age = 20;
+
+if (age >= 18) {
+    System.out.println("성인입니다.");
+}
+```
+
+### if-else 문
+
+```java
+int age = 15;
+
+if (age >= 18) {
+    System.out.println("성인입니다.");
+} else {
+    System.out.println("미성년자입니다.");
+}
+```
+
+### if-else if-else 문
+
 ```java
 int score = 85;
 
 if (score >= 90) {
-    System.out.println("A");
+    System.out.println("A 학점");
 } else if (score >= 80) {
-    System.out.println("B");
+    System.out.println("B 학점");
+} else if (score >= 70) {
+    System.out.println("C 학점");
+} else if (score >= 60) {
+    System.out.println("D 학점");
 } else {
-    System.out.println("C");
+    System.out.println("F 학점");
 }
 ```
 
-### `switch`
-`switch` 문은 `int`, `String`, `enum` 타입 변수와 함께 자주 사용됩니다.
+### 중첩 if 문
+
+```java
+int age = 25;
+boolean hasLicense = true;
+
+if (age >= 18) {
+    if (hasLicense) {
+        System.out.println("운전 가능합니다.");
+    } else {
+        System.out.println("면허가 필요합니다.");
+    }
+} else {
+    System.out.println("나이가 부족합니다.");
+}
+```
+
+**권장**: 중첩이 깊어지면 가독성이 떨어지므로, 논리 연산자로 통합하거나 메서드로 분리하세요.
+
+```java
+// 개선된 코드
+if (age >= 18 && hasLicense) {
+    System.out.println("운전 가능합니다.");
+} else if (age >= 18) {
+    System.out.println("면허가 필요합니다.");
+} else {
+    System.out.println("나이가 부족합니다.");
+}
+```
+
+### 블록 생략
+
+조건문 내부가 한 줄이면 중괄호를 생략할 수 있습니다. (비권장)
+
+```java
+// 블록 생략 가능 (비권장)
+if (age >= 18)
+    System.out.println("성인입니다.");
+
+// 블록 사용 (권장)
+if (age >= 18) {
+    System.out.println("성인입니다.");
+}
+```
+
+**권장**: 항상 중괄호를 사용하세요! 버그 방지에 도움이 됩니다.
+
+**JavaScript 비교**: JavaScript와 완전히 동일합니다.
+
+```javascript
+// JavaScript
+let age = 20;
+
+if (age >= 18) {
+    console.log("성인입니다.");
+} else {
+    console.log("미성년자입니다.");
+}
+```
+
+---
+
+## 2. switch 문
+
+하나의 변수를 여러 값과 비교할 때 사용합니다.
+
+### 기본 문법
+
+```java
+switch (변수) {
+    case 값1:
+        // 변수가 값1과 같을 때 실행
+        break;
+    case 값2:
+        // 변수가 값2와 같을 때 실행
+        break;
+    default:
+        // 모든 case에 해당하지 않을 때 실행
+}
+```
+
+### 기본 예제
+
+```java
+int day = 3;
+
+switch (day) {
+    case 1:
+        System.out.println("월요일");
+        break;
+    case 2:
+        System.out.println("화요일");
+        break;
+    case 3:
+        System.out.println("수요일");
+        break;
+    case 4:
+        System.out.println("목요일");
+        break;
+    case 5:
+        System.out.println("금요일");
+        break;
+    case 6:
+        System.out.println("토요일");
+        break;
+    case 7:
+        System.out.println("일요일");
+        break;
+    default:
+        System.out.println("잘못된 입력");
+}
+```
+
+### break의 중요성
+
+`break`를 생략하면 다음 case로 **계속 실행됩니다** (fall-through).
+
+```java
+int month = 3;
+
+switch (month) {
+    case 12:
+    case 1:
+    case 2:
+        System.out.println("겨울");
+        break;
+    case 3:
+    case 4:
+    case 5:
+        System.out.println("봄");
+        break;
+    case 6:
+    case 7:
+    case 8:
+        System.out.println("여름");
+        break;
+    case 9:
+    case 10:
+    case 11:
+        System.out.println("가을");
+        break;
+    default:
+        System.out.println("잘못된 월");
+}
+```
+
+### String switch (Java 7+)
+
+Java 7부터 String 타입도 switch에 사용할 수 있습니다.
+
 ```java
 String grade = "B";
 
@@ -30,37 +225,636 @@ switch (grade) {
     case "C":
         System.out.println("Try harder!");
         break;
+    case "D":
+        System.out.println("Poor");
+        break;
+    case "F":
+        System.out.println("Fail");
+        break;
     default:
-        System.out.println("Invalid grade.");
+        System.out.println("Invalid grade");
 }
 ```
 
-### `for`
+### switch 표현식 (Java 14+)
+
+Java 14부터 화살표(`->`)를 사용한 간결한 switch 표현식을 지원합니다.
+
 ```java
-// 0부터 4까지 5번 반복
-for (int i = 0; i < 5; i++) {
-    System.out.println("Current number: " + i);
+int day = 3;
+
+String dayName = switch (day) {
+    case 1 -> "월요일";
+    case 2 -> "화요일";
+    case 3 -> "수요일";
+    case 4 -> "목요일";
+    case 5 -> "금요일";
+    case 6 -> "토요일";
+    case 7 -> "일요일";
+    default -> "잘못된 입력";
+};
+
+System.out.println(dayName);  // 수요일
+```
+
+**장점**:
+- break 불필요
+- 값을 반환할 수 있음
+- 간결한 코드
+
+### switch vs if-else
+
+**switch 사용이 좋은 경우**:
+- 하나의 변수를 여러 값과 비교
+- 비교 값이 명확한 경우 (정수, 문자열 등)
+
+**if-else 사용이 좋은 경우**:
+- 범위 비교 (`>=`, `<=` 등)
+- 복잡한 조건식
+- boolean 타입 조건
+
+```java
+// switch 적합
+int choice = 2;
+switch (choice) {
+    case 1: /* ... */ break;
+    case 2: /* ... */ break;
+}
+
+// if-else 적합
+int score = 85;
+if (score >= 90) {
+    // ...
+} else if (score >= 80) {
+    // ...
 }
 ```
 
-### `while`
+**JavaScript 비교**: JavaScript의 switch와 거의 동일하지만, Java는 switch 표현식(Java 14+)을 추가로 지원합니다.
+
+---
+
+## 3. for 문
+
+정해진 횟수만큼 반복할 때 사용합니다.
+
+### 기본 문법
+
+```java
+for (초기식; 조건식; 증감식) {
+    // 반복 실행할 코드
+}
+```
+
+### 기본 예제
+
+```java
+// 0부터 4까지 출력
+for (int i = 0; i < 5; i++) {
+    System.out.println("i = " + i);
+}
+
+// 출력:
+// i = 0
+// i = 1
+// i = 2
+// i = 3
+// i = 4
+```
+
+### 실행 순서
+
+```java
+for (int i = 0; i < 5; i++) {
+    System.out.println(i);
+}
+
+// 1. 초기식 실행: int i = 0
+// 2. 조건식 확인: i < 5 (true)
+// 3. 블록 실행: System.out.println(i)
+// 4. 증감식 실행: i++
+// 5. 조건식 확인: i < 5 (true/false)
+// 6. 2~5 반복
+```
+
+### 다양한 형태
+
+```java
+// 1부터 10까지
+for (int i = 1; i <= 10; i++) {
+    System.out.print(i + " ");
+}
+System.out.println();
+
+// 10부터 1까지 (감소)
+for (int i = 10; i >= 1; i--) {
+    System.out.print(i + " ");
+}
+System.out.println();
+
+// 2씩 증가
+for (int i = 0; i < 10; i += 2) {
+    System.out.print(i + " ");  // 0 2 4 6 8
+}
+System.out.println();
+
+// 구구단 (5단)
+for (int i = 1; i <= 9; i++) {
+    System.out.println("5 x " + i + " = " + (5 * i));
+}
+```
+
+### 중첩 for 문
+
+```java
+// 구구단 전체
+for (int dan = 2; dan <= 9; dan++) {
+    System.out.println("=== " + dan + "단 ===");
+    for (int i = 1; i <= 9; i++) {
+        System.out.println(dan + " x " + i + " = " + (dan * i));
+    }
+    System.out.println();
+}
+
+// 별 그리기
+for (int i = 1; i <= 5; i++) {
+    for (int j = 1; j <= i; j++) {
+        System.out.print("*");
+    }
+    System.out.println();
+}
+// 출력:
+// *
+// **
+// ***
+// ****
+// *****
+```
+
+**JavaScript 비교**: JavaScript와 완전히 동일합니다.
+
+```javascript
+// JavaScript
+for (let i = 0; i < 5; i++) {
+    console.log(i);
+}
+```
+
+---
+
+## 4. while 문
+
+조건이 참인 동안 반복합니다.
+
+### 기본 문법
+
+```java
+while (조건식) {
+    // 조건식이 true인 동안 반복 실행
+}
+```
+
+### 기본 예제
+
 ```java
 int count = 0;
+
 while (count < 5) {
-    System.out.println("Count: " + count);
+    System.out.println("count = " + count);
     count++;
+}
+
+// 출력:
+// count = 0
+// count = 1
+// count = 2
+// count = 3
+// count = 4
+```
+
+### 무한 루프
+
+조건식이 항상 true면 무한 반복합니다.
+
+```java
+// 무한 루프 (주의!)
+while (true) {
+    System.out.println("무한 반복");
+    // break 없이는 끝나지 않음!
 }
 ```
 
-### for-each (향상된 for문)
-Java는 배열이나 컬렉션의 모든 요소를 순회할 때 매우 편리한 for-each 구문을 제공합니다. JavaScript의 `for...of` 루프와 유사합니다.
+### for vs while
+
+**for 문**: 반복 횟수가 명확할 때
 
 ```java
-// 정수 배열 선언
+// 10번 반복
+for (int i = 0; i < 10; i++) {
+    System.out.println(i);
+}
+```
+
+**while 문**: 조건에 따라 반복할 때
+
+```java
+// 사용자가 "exit" 입력할 때까지 반복
+Scanner scanner = new Scanner(System.in);
+String input = "";
+
+while (!input.equals("exit")) {
+    System.out.print("입력 (exit로 종료): ");
+    input = scanner.nextLine();
+    System.out.println("입력값: " + input);
+}
+```
+
+**JavaScript 비교**: JavaScript와 완전히 동일합니다.
+
+---
+
+## 5. do-while 문
+
+최소 한 번은 실행한 후, 조건을 확인합니다.
+
+### 기본 문법
+
+```java
+do {
+    // 최소 한 번은 실행
+} while (조건식);
+```
+
+### 예제
+
+```java
+int count = 0;
+
+do {
+    System.out.println("count = " + count);
+    count++;
+} while (count < 5);
+
+// 출력:
+// count = 0
+// count = 1
+// count = 2
+// count = 3
+// count = 4
+```
+
+### while vs do-while
+
+**while**: 조건을 먼저 확인
+
+```java
+int x = 10;
+
+while (x < 5) {
+    System.out.println("실행 안 됨");  // 조건이 false이므로 실행 안 됨
+}
+```
+
+**do-while**: 최소 한 번 실행
+
+```java
+int x = 10;
+
+do {
+    System.out.println("최소 한 번 실행됨");  // 조건과 상관없이 한 번은 실행
+} while (x < 5);
+```
+
+### 사용 예시
+
+```java
+// 메뉴 시스템
+Scanner scanner = new Scanner(System.in);
+int choice;
+
+do {
+    System.out.println("=== 메뉴 ===");
+    System.out.println("1. 추가");
+    System.out.println("2. 삭제");
+    System.out.println("3. 조회");
+    System.out.println("0. 종료");
+    System.out.print("선택: ");
+    choice = scanner.nextInt();
+
+    switch (choice) {
+        case 1: System.out.println("추가 선택"); break;
+        case 2: System.out.println("삭제 선택"); break;
+        case 3: System.out.println("조회 선택"); break;
+        case 0: System.out.println("종료"); break;
+        default: System.out.println("잘못된 선택");
+    }
+} while (choice != 0);
+```
+
+---
+
+## 6. 향상된 for 문 (for-each)
+
+배열이나 컬렉션의 모든 요소를 순회할 때 사용합니다.
+
+### 기본 문법
+
+```java
+for (타입 변수명 : 배열_또는_컬렉션) {
+    // 각 요소에 대해 실행
+}
+```
+
+### 예제
+
+```java
 int[] numbers = {10, 20, 30, 40, 50};
 
-// for-each 루프를 사용하여 배열의 모든 요소를 출력
+// 향상된 for 문
+for (int number : numbers) {
+    System.out.println(number);
+}
+
+// 일반 for 문과 비교
+for (int i = 0; i < numbers.length; i++) {
+    System.out.println(numbers[i]);
+}
+```
+
+### String 배열
+
+```java
+String[] fruits = {"사과", "바나나", "오렌지"};
+
+for (String fruit : fruits) {
+    System.out.println(fruit);
+}
+```
+
+### 장단점
+
+**장점**:
+- 간결한 코드
+- 인덱스 관리 불필요
+- 에러 가능성 낮음
+
+**단점**:
+- 인덱스에 접근할 수 없음
+- 배열/컬렉션 수정 불가
+- 역순 순회 불가
+
+```java
+int[] numbers = {1, 2, 3, 4, 5};
+
+// 인덱스가 필요한 경우: 일반 for 문 사용
+for (int i = 0; i < numbers.length; i++) {
+    System.out.println("인덱스 " + i + ": " + numbers[i]);
+}
+
+// 단순 순회: 향상된 for 문 사용
 for (int number : numbers) {
     System.out.println(number);
 }
 ```
+
+**JavaScript 비교**: JavaScript의 `for...of`와 유사합니다.
+
+```javascript
+// JavaScript - for...of
+const numbers = [10, 20, 30, 40, 50];
+
+for (const number of numbers) {
+    console.log(number);
+}
+```
+
+---
+
+## 7. break 문
+
+반복문을 **즉시 종료**합니다.
+
+### 예제
+
+```java
+// 1부터 10까지 중 5가 나오면 중단
+for (int i = 1; i <= 10; i++) {
+    if (i == 5) {
+        break;  // 반복문 종료
+    }
+    System.out.println(i);
+}
+// 출력: 1 2 3 4
+
+// 무한 루프 탈출
+int count = 0;
+while (true) {
+    System.out.println(count);
+    count++;
+    if (count >= 5) {
+        break;  // 5가 되면 루프 종료
+    }
+}
+```
+
+### 중첩 반복문에서의 break
+
+`break`는 **가장 가까운** 반복문만 종료합니다.
+
+```java
+for (int i = 1; i <= 3; i++) {
+    for (int j = 1; j <= 3; j++) {
+        if (j == 2) {
+            break;  // 내부 for문만 종료
+        }
+        System.out.println("i=" + i + ", j=" + j);
+    }
+}
+
+// 출력:
+// i=1, j=1
+// i=2, j=1
+// i=3, j=1
+```
+
+### 레이블을 사용한 break
+
+외부 반복문을 종료하려면 레이블을 사용합니다.
+
+```java
+outer: for (int i = 1; i <= 3; i++) {
+    for (int j = 1; j <= 3; j++) {
+        if (j == 2) {
+            break outer;  // 외부 for문 종료
+        }
+        System.out.println("i=" + i + ", j=" + j);
+    }
+}
+
+// 출력:
+// i=1, j=1
+```
+
+---
+
+## 8. continue 문
+
+현재 반복을 **건너뛰고 다음 반복**으로 이동합니다.
+
+### 예제
+
+```java
+// 짝수만 출력 (홀수는 건너뛰기)
+for (int i = 1; i <= 10; i++) {
+    if (i % 2 != 0) {
+        continue;  // 홀수면 다음 반복으로
+    }
+    System.out.println(i);
+}
+// 출력: 2 4 6 8 10
+
+// 3의 배수 건너뛰기
+for (int i = 1; i <= 10; i++) {
+    if (i % 3 == 0) {
+        continue;
+    }
+    System.out.println(i);
+}
+// 출력: 1 2 4 5 7 8 10
+```
+
+### break vs continue
+
+```java
+// break: 반복문 종료
+for (int i = 1; i <= 5; i++) {
+    if (i == 3) {
+        break;
+    }
+    System.out.println(i);
+}
+// 출력: 1 2
+
+// continue: 현재 반복만 건너뛰기
+for (int i = 1; i <= 5; i++) {
+    if (i == 3) {
+        continue;
+    }
+    System.out.println(i);
+}
+// 출력: 1 2 4 5
+```
+
+---
+
+## 실습 문제
+
+### 문제 1: 1부터 N까지의 합
+
+1부터 N까지의 합을 구하는 프로그램을 작성하세요.
+
+```java
+int n = 100;
+int sum = 0;
+
+// 여기에 코드 작성
+
+System.out.println("1부터 " + n + "까지의 합: " + sum);
+```
+
+**예상 출력**: `1부터 100까지의 합: 5050`
+
+### 문제 2: 팩토리얼
+
+N 팩토리얼(N!)을 구하는 프로그램을 작성하세요. (예: 5! = 5 × 4 × 3 × 2 × 1 = 120)
+
+```java
+int n = 5;
+int factorial = 1;
+
+// 여기에 코드 작성
+
+System.out.println(n + "! = " + factorial);
+```
+
+**예상 출력**: `5! = 120`
+
+### 문제 3: 별 역삼각형
+
+다음과 같은 별 역삼각형을 출력하는 프로그램을 작성하세요.
+
+```
+*****
+****
+***
+**
+*
+```
+
+### 문제 4: 소수 판별
+
+주어진 숫자가 소수인지 판별하는 프로그램을 작성하세요.
+
+```java
+int num = 17;
+boolean isPrime = true;
+
+// 여기에 코드 작성 (2부터 num-1까지 나누어떨어지는지 확인)
+
+if (isPrime) {
+    System.out.println(num + "은(는) 소수입니다.");
+} else {
+    System.out.println(num + "은(는) 소수가 아닙니다.");
+}
+```
+
+### 문제 5: 구구단 출력
+
+사용자가 입력한 단의 구구단을 출력하는 프로그램을 작성하세요.
+
+```java
+int dan = 7;
+
+// 여기에 코드 작성
+```
+
+**예상 출력**:
+```
+=== 7단 ===
+7 x 1 = 7
+7 x 2 = 14
+...
+7 x 9 = 63
+```
+
+---
+
+## 요약
+
+- **if-else**: 조건에 따라 코드 실행
+  - if, else if, else
+  - 중첩 가능
+- **switch**: 하나의 변수를 여러 값과 비교
+  - int, String, enum 타입 지원
+  - break 필수 (fall-through 방지)
+  - Java 14+: switch 표현식 (화살표 `->`)
+- **for**: 정해진 횟수만큼 반복
+  - `for (초기식; 조건식; 증감식)`
+  - 중첩 가능
+- **while**: 조건이 참인 동안 반복
+  - 조건을 먼저 확인
+  - 반복 횟수가 불명확할 때 유용
+- **do-while**: 최소 한 번 실행 후 조건 확인
+  - 최소 1회 실행 보장
+- **향상된 for (for-each)**: 배열/컬렉션 순회
+  - `for (타입 변수 : 배열)`
+  - 간결하지만 인덱스 접근 불가
+- **break**: 반복문 즉시 종료
+  - 레이블 사용 가능
+- **continue**: 현재 반복 건너뛰기
+  - 다음 반복으로 이동
+
+**JavaScript와의 차이점**:
+- Java: switch에서 String 사용 가능 (Java 7+)
+- Java: switch 표현식 지원 (Java 14+)
+- Java: 향상된 for 문 = JavaScript의 for...of
