--- a/02_Java_기본_문법/2.5_배열.md
+++ b/02_Java_기본_문법/2.5_배열.md
@@ -1,53 +1,624 @@
-# 2.5. 배열 (Arrays)
+# 2.5. 배열
 
-Java의 배열은 **한 가지 타입의 값들을 여러 개 저장**하는 데 사용되는 고정된 크기의 자료 구조입니다.
+> 배열의 개념을 이해하고, 배열의 선언, 생성, 초기화 및 사용법을 익힐 수 있다.
 
-### JavaScript 배열과의 핵심 차이점
+## 배열이란?
 
-1.  **고정 크기 (Fixed Size)**: Java 배열은 한 번 생성되면 **크기를 변경할 수 없습니다.**
-2.  **단일 타입 (Single Type)**: 배열을 선언할 때 지정한 타입의 값만 저장할 수 있습니다.
+**배열(Array)**은 **같은 타입의 데이터 여러 개를 하나의 변수**에 저장하는 자료구조입니다.
 
-이러한 제약은 JavaScript 개발자에게는 불편하게 느껴질 수 있지만, 타입 안정성과 예측 가능성을 보장하여 대규모 애플리케이션에서 오류를 줄여주는 장점이 있습니다.
+**JavaScript 비교**: JavaScript 배열과 유사하지만, Java 배열은 두 가지 중요한 차이점이 있습니다.
 
-**JavaScript 배열**
+1. **고정 크기**: 한 번 생성하면 크기 변경 불가
+2. **단일 타입**: 같은 타입의 데이터만 저장 가능
+
 ```javascript
-let arr = [1, 'two', true]; // 여러 타입, 동적 크기
-arr.push(4); // 크기 변경 가능
+// JavaScript - 유연한 배열
+let arr = [1, "two", true];  // 여러 타입 혼합 가능
+arr.push(4);  // 동적으로 크기 변경 가능
+console.log(arr.length);  // 4
 ```
 
-**Java 배열**
 ```java
-public class ArrayExample {
-    public static void main(String[] args) {
-        // 1. 배열 선언 및 생성
-        // int 타입 3개를 담을 수 있는 배열을 생성하고, 기본값 0으로 자동 초기화됩니다.
-        int[] numbers = new int[3];
+// Java - 고정 크기, 단일 타입
+int[] arr = new int[3];  // 크기 3으로 고정
+arr[0] = 1;
+arr[1] = 2;
+arr[2] = 3;
+// arr[3] = 4;  // 에러! 크기 초과
+// arr[0] = "two";  // 에러! 타입 불일치
+```
 
-        // 2. 값 할당
-        numbers[0] = 10;
-        numbers[1] = 20;
-        numbers[2] = 30;
-        // numbers[3] = 40; // 컴파일 에러는 아니지만, 실행 시 에러 발생!
-                           // (ArrayIndexOutOfBoundsException)
+---
 
-        // 선언과 동시에 초기화
-        String[] days = {"월", "화", "수", "목", "금", "토", "일"};
+## 배열 선언과 생성
 
-        // 3. 값에 접근
-        System.out.println(days[0]); // "월" 출력
-        System.out.println(numbers[1]); // 20 출력
+### 선언 방법
 
-        // 4. 배열의 길이
-        // .length는 메서드가 아닌 배열의 속성입니다.
-        System.out.println("days 배열의 길이: " + days.length); // 7 출력
+```java
+// 방법 1 (권장)
+타입[] 배열명;
 
-        // 5. 배열 순회 (for문 사용)
-        for (int i = 0; i < days.length; i++) {
-            System.out.print(days[i] + " ");
+// 방법 2 (C 스타일)
+타입 배열명[];
+```
+
+### 예제
+
+```java
+int[] numbers;      // int 배열
+String[] names;     // String 배열
+double[] scores;    // double 배열
+```
+
+### 배열 생성
+
+선언만으로는 배열을 사용할 수 없습니다. `new` 키워드로 배열을 생성해야 합니다.
+
+```java
+int[] numbers = new int[5];  // 크기 5인 int 배열 생성
+```
+
+**메모리 할당**:
+- 배열 생성 시 지정한 크기만큼 메모리가 할당됩니다
+- 기본값으로 자동 초기화됩니다
+
+| 타입 | 기본값 |
+|:---|:---|
+| `int`, `long`, `short`, `byte` | `0` |
+| `float`, `double` | `0.0` |
+| `boolean` | `false` |
+| `char` | `'\u0000'` (null 문자) |
+| 참조형 (String 등) | `null` |
+
+```java
+int[] numbers = new int[3];
+// numbers[0] = 0
+// numbers[1] = 0
+// numbers[2] = 0
+```
+
+---
+
+## 배열 초기화
+
+### 방법 1: 생성 후 값 할당
+
+```java
+int[] numbers = new int[3];
+numbers[0] = 10;
+numbers[1] = 20;
+numbers[2] = 30;
+```
+
+### 방법 2: 선언과 동시에 초기화 (권장)
+
+```java
+int[] numbers = {10, 20, 30};  // new int[] 생략 가능
+String[] days = {"월", "화", "수", "목", "금"};
+```
+
+### 방법 3: new와 함께 초기화
+
+```java
+int[] numbers = new int[]{10, 20, 30};  // 크기 생략
+```
+
+**차이점**:
+```java
+// ✅ 선언과 동시에
+int[] arr1 = {1, 2, 3};
+
+// ❌ 선언 후 나중에 (에러!)
+int[] arr2;
+arr2 = {1, 2, 3};  // 컴파일 에러!
+
+// ✅ 선언 후 나중에 (new 사용)
+int[] arr3;
+arr3 = new int[]{1, 2, 3};  // 가능
+```
+
+---
+
+## 배열 요소 접근
+
+인덱스를 사용하여 배열의 요소에 접근합니다. 인덱스는 **0부터 시작**합니다.
+
+```java
+int[] numbers = {10, 20, 30, 40, 50};
+
+// 읽기
+System.out.println(numbers[0]);  // 10
+System.out.println(numbers[2]);  // 30
+
+// 쓰기
+numbers[1] = 25;
+System.out.println(numbers[1]);  // 25
+
+// 마지막 요소
+System.out.println(numbers[numbers.length - 1]);  // 50
+```
+
+### 배열 인덱스 범위
+
+```java
+int[] numbers = new int[5];  // 인덱스: 0, 1, 2, 3, 4
+
+numbers[0] = 10;  // ✅ 가능
+numbers[4] = 50;  // ✅ 가능
+// numbers[5] = 60;  // ❌ ArrayIndexOutOfBoundsException!
+// numbers[-1] = 0;  // ❌ ArrayIndexOutOfBoundsException!
+```
+
+**JavaScript 비교**: JavaScript는 범위를 벗어난 인덱스 접근 시 `undefined`를 반환하지만, Java는 예외를 발생시킵니다.
+
+```javascript
+// JavaScript
+const arr = [1, 2, 3];
+console.log(arr[5]);  // undefined (에러 없음)
+```
+
+---
+
+## 배열 길이 (length)
+
+`length` 속성으로 배열의 크기를 확인합니다.
+
+```java
+int[] numbers = {10, 20, 30, 40, 50};
+System.out.println(numbers.length);  // 5
+```
+
+**주의**: `length`는 메서드가 아니라 **속성(필드)**입니다. 괄호 `()`를 붙이지 않습니다.
+
+```java
+int[] arr = new int[5];
+System.out.println(arr.length);    // ✅ 5
+// System.out.println(arr.length());  // ❌ 컴파일 에러!
+```
+
+**JavaScript 비교**: JavaScript도 `length` 속성을 사용하지만, 값을 변경할 수 있습니다.
+
+```javascript
+// JavaScript
+let arr = [1, 2, 3];
+console.log(arr.length);  // 3
+arr.length = 5;  // 길이 변경 가능
+```
+
+Java는 배열의 `length`를 변경할 수 없습니다.
+
+---
+
+## 배열 순회
+
+### 일반 for 문
+
+```java
+int[] numbers = {10, 20, 30, 40, 50};
+
+for (int i = 0; i < numbers.length; i++) {
+    System.out.println("numbers[" + i + "] = " + numbers[i]);
+}
+
+// 출력:
+// numbers[0] = 10
+// numbers[1] = 20
+// numbers[2] = 30
+// numbers[3] = 40
+// numbers[4] = 50
+```
+
+### 향상된 for 문 (for-each)
+
+인덱스가 필요 없을 때 사용하면 코드가 간결해집니다.
+
+```java
+int[] numbers = {10, 20, 30, 40, 50};
+
+for (int num : numbers) {
+    System.out.println(num);
+}
+
+// 출력:
+// 10
+// 20
+// 30
+// 40
+// 50
+```
+
+### 역순 순회
+
+```java
+int[] numbers = {10, 20, 30, 40, 50};
+
+for (int i = numbers.length - 1; i >= 0; i--) {
+    System.out.println(numbers[i]);
+}
+
+// 출력:
+// 50
+// 40
+// 30
+// 20
+// 10
+```
+
+**JavaScript 비교**:
+
+```javascript
+// JavaScript - for...of
+const numbers = [10, 20, 30, 40, 50];
+
+for (const num of numbers) {
+    console.log(num);
+}
+```
+
+---
+
+## 배열 복사
+
+### 얕은 복사 (참조 복사)
+
+```java
+int[] arr1 = {1, 2, 3};
+int[] arr2 = arr1;  // 참조만 복사
+
+arr2[0] = 10;
+System.out.println(arr1[0]);  // 10 (arr1도 변경됨!)
+```
+
+### 깊은 복사 (값 복사)
+
+#### 1. 반복문 사용
+
+```java
+int[] arr1 = {1, 2, 3};
+int[] arr2 = new int[arr1.length];
+
+for (int i = 0; i < arr1.length; i++) {
+    arr2[i] = arr1[i];
+}
+
+arr2[0] = 10;
+System.out.println(arr1[0]);  // 1 (arr1은 변경 안 됨)
+```
+
+#### 2. System.arraycopy() 사용
+
+```java
+int[] arr1 = {1, 2, 3, 4, 5};
+int[] arr2 = new int[arr1.length];
+
+System.arraycopy(arr1, 0, arr2, 0, arr1.length);
+// System.arraycopy(원본배열, 시작인덱스, 대상배열, 시작인덱스, 복사길이)
+```
+
+#### 3. Arrays.copyOf() 사용 (권장)
+
+```java
+import java.util.Arrays;
+
+int[] arr1 = {1, 2, 3, 4, 5};
+int[] arr2 = Arrays.copyOf(arr1, arr1.length);
+
+// 일부만 복사
+int[] arr3 = Arrays.copyOf(arr1, 3);  // {1, 2, 3}
+```
+
+---
+
+## 다차원 배열
+
+### 2차원 배열
+
+```java
+// 선언 및 생성
+int[][] matrix = new int[3][4];  // 3행 4열
+
+// 선언과 동시에 초기화
+int[][] matrix = {
+    {1, 2, 3, 4},
+    {5, 6, 7, 8},
+    {9, 10, 11, 12}
+};
+
+// 접근
+System.out.println(matrix[0][0]);  // 1
+System.out.println(matrix[1][2]);  // 7
+System.out.println(matrix[2][3]);  // 12
+
+// 순회
+for (int i = 0; i < matrix.length; i++) {
+    for (int j = 0; j < matrix[i].length; j++) {
+        System.out.print(matrix[i][j] + " ");
+    }
+    System.out.println();
+}
+```
+
+### 가변 배열 (Jagged Array)
+
+각 행의 열 개수가 다를 수 있습니다.
+
+```java
+int[][] jagged = new int[3][];  // 행만 지정
+jagged[0] = new int[2];  // 1행: 2열
+jagged[1] = new int[4];  // 2행: 4열
+jagged[2] = new int[3];  // 3행: 3열
+
+// 초기화와 동시에
+int[][] jagged = {
+    {1, 2},
+    {3, 4, 5, 6},
+    {7, 8, 9}
+};
+```
+
+**JavaScript 비교**: JavaScript는 기본적으로 가변 배열입니다.
+
+```javascript
+// JavaScript
+const jagged = [
+    [1, 2],
+    [3, 4, 5, 6],
+    [7, 8, 9]
+];
+```
+
+---
+
+## Arrays 클래스
+
+`java.util.Arrays` 클래스는 배열 관련 유틸리티 메서드를 제공합니다.
+
+### 배열 출력
+
+```java
+import java.util.Arrays;
+
+int[] numbers = {5, 2, 8, 1, 9};
+
+System.out.println(numbers);  // [I@주소값 (의미 없음)
+System.out.println(Arrays.toString(numbers));  // [5, 2, 8, 1, 9]
+```
+
+### 배열 정렬
+
+```java
+import java.util.Arrays;
+
+int[] numbers = {5, 2, 8, 1, 9};
+Arrays.sort(numbers);  // 오름차순 정렬
+
+System.out.println(Arrays.toString(numbers));  // [1, 2, 5, 8, 9]
+```
+
+### 배열 검색
+
+```java
+import java.util.Arrays;
+
+int[] numbers = {1, 2, 5, 8, 9};  // 정렬된 배열이어야 함
+Arrays.sort(numbers);
+
+int index = Arrays.binarySearch(numbers, 5);
+System.out.println(index);  // 2 (5가 있는 인덱스)
+```
+
+### 배열 채우기
+
+```java
+import java.util.Arrays;
+
+int[] numbers = new int[5];
+Arrays.fill(numbers, 10);  // 모든 요소를 10으로
+
+System.out.println(Arrays.toString(numbers));  // [10, 10, 10, 10, 10]
+```
+
+### 배열 비교
+
+```java
+import java.util.Arrays;
+
+int[] arr1 = {1, 2, 3};
+int[] arr2 = {1, 2, 3};
+int[] arr3 = {1, 2, 4};
+
+System.out.println(arr1 == arr2);  // false (참조 비교)
+System.out.println(Arrays.equals(arr1, arr2));  // true (내용 비교)
+System.out.println(Arrays.equals(arr1, arr3));  // false
+```
+
+---
+
+## 실전 예제
+
+### 예제 1: 배열의 최대값, 최소값
+
+```java
+int[] numbers = {45, 23, 78, 12, 91, 34};
+
+int max = numbers[0];
+int min = numbers[0];
+
+for (int num : numbers) {
+    if (num > max) {
+        max = num;
+    }
+    if (num < min) {
+        min = num;
+    }
+}
+
+System.out.println("최대값: " + max);  // 91
+System.out.println("최소값: " + min);  // 12
+```
+
+### 예제 2: 배열의 평균
+
+```java
+int[] scores = {85, 90, 78, 92, 88};
+
+int sum = 0;
+for (int score : scores) {
+    sum += score;
+}
+
+double average = (double) sum / scores.length;
+System.out.println("평균: " + average);  // 86.6
+```
+
+### 예제 3: 배열 역순 정렬
+
+```java
+int[] numbers = {1, 2, 3, 4, 5};
+
+// 배열 뒤집기
+for (int i = 0; i < numbers.length / 2; i++) {
+    int temp = numbers[i];
+    numbers[i] = numbers[numbers.length - 1 - i];
+    numbers[numbers.length - 1 - i] = temp;
+}
+
+System.out.println(Arrays.toString(numbers));  // [5, 4, 3, 2, 1]
+```
+
+### 예제 4: 로또 번호 생성
+
+```java
+import java.util.Arrays;
+
+int[] lotto = new int[6];
+
+for (int i = 0; i < lotto.length; i++) {
+    lotto[i] = (int)(Math.random() * 45) + 1;  // 1~45
+
+    // 중복 제거
+    for (int j = 0; j < i; j++) {
+        if (lotto[i] == lotto[j]) {
+            i--;
+            break;
         }
-        // 출력: 월 화 수 목 금 토 일
+    }
+}
+
+Arrays.sort(lotto);  // 정렬
+System.out.println("로또 번호: " + Arrays.toString(lotto));
+```
+
+---
+
+## 실습 문제
+
+### 문제 1: 배열의 합
+
+배열의 모든 요소의 합을 구하는 프로그램을 작성하세요.
+
+```java
+int[] numbers = {10, 20, 30, 40, 50};
+int sum = 0;
+
+// 여기에 코드 작성
+
+System.out.println("합계: " + sum);
+```
+
+**예상 출력**: `합계: 150`
+
+### 문제 2: 짝수만 출력
+
+배열에서 짝수만 출력하는 프로그램을 작성하세요.
+
+```java
+int[] numbers = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
+
+// 여기에 코드 작성
+```
+
+**예상 출력**: `2 4 6 8 10`
+
+### 문제 3: 배열 복사
+
+배열을 새로운 배열에 복사하되, 모든 값을 2배로 만드는 프로그램을 작성하세요.
+
+```java
+int[] arr1 = {1, 2, 3, 4, 5};
+int[] arr2 = new int[arr1.length];
+
+// 여기에 코드 작성
+
+System.out.println(Arrays.toString(arr2));
+```
+
+**예상 출력**: `[2, 4, 6, 8, 10]`
+
+### 문제 4: 성적 분석
+
+학생들의 점수를 저장한 배열에서 평균과 평균 이상인 학생 수를 구하는 프로그램을 작성하세요.
+
+```java
+int[] scores = {85, 90, 78, 92, 88, 76, 95};
+
+// 여기에 코드 작성 (평균, 평균 이상 학생 수)
+```
+
+**예상 출력**:
+```
+평균: 86.29
+평균 이상 학생: 4명
+```
+
+### 문제 5: 구구단 2차원 배열
+
+구구단 2~9단을 2차원 배열에 저장하고 출력하는 프로그램을 작성하세요.
+
+```java
+int[][] gugudan = new int[8][9];
+
+// 여기에 코드 작성 (구구단 계산 및 저장)
+
+// 출력
+for (int i = 0; i < gugudan.length; i++) {
+    System.out.println("=== " + (i + 2) + "단 ===");
+    for (int j = 0; j < gugudan[i].length; j++) {
+        System.out.println((i + 2) + " x " + (j + 1) + " = " + gugudan[i][j]);
     }
 }
 ```
 
-> **Tip**: 동적으로 크기가 변하는 배열(리스트)이 필요할 때는 Java의 **컬렉션 프레임워크**에 포함된 `ArrayList` 클래스를 사용하며, 이는 이후 챕터에서 자세히 다룹니다.
+---
+
+## 요약
+
+- **배열**: 같은 타입의 데이터 여러 개를 저장하는 자료구조
+- **고정 크기**: 생성 후 크기 변경 불가
+- **단일 타입**: 같은 타입만 저장 가능
+- **선언과 생성**:
+  - `타입[] 배열명 = new 타입[크기];`
+  - `타입[] 배열명 = {값1, 값2, ...};`
+- **인덱스**: 0부터 시작
+- **길이**: `배열명.length` (속성)
+- **순회**:
+  - 일반 for 문: 인덱스 필요할 때
+  - 향상된 for 문: 단순 순회
+- **Arrays 클래스**:
+  - `toString()`: 배열 출력
+  - `sort()`: 정렬
+  - `copyOf()`: 복사
+  - `fill()`: 채우기
+  - `equals()`: 비교
+- **다차원 배열**: `int[][] arr = new int[행][열];`
+- **가변 배열**: 각 행의 열 개수가 다를 수 있음
+
+**JavaScript와의 주요 차이점**:
+- Java: 고정 크기, 단일 타입
+- JavaScript: 동적 크기, 여러 타입 혼합 가능
+- Java: `length` 속성 (변경 불가)
+- JavaScript: `length` 속성 (변경 가능)
+- Java: 범위 초과 시 예외 발생
+- JavaScript: 범위 초과 시 `undefined` 반환
+
+**참고**: 동적 크기가 필요하면 `ArrayList` 사용 (7장에서 학습)
