--- a/목차.md
+++ b/목차.md
@@ -1,11 +1,8 @@
 # Java 프로그래밍 입문 (JavaScript 개발자 대상)
 
 ## 1. Java 소개 및 환경 설정
--   1.1. Java란 무엇인가?
--   1.2. Java와 JavaScript의 핵심 차이점
--   1.3. JDK 설치 및 환경 변수 설정
--   1.4. IDE 설치 및 사용법 (IntelliJ IDEA)
--   1.5. 첫 Java 프로그램: "Hello, World!"
+-   [1.1. Java란 무엇인가? (JavaScript와의 비교)](./01_Java_소개_및_환경_설정/1.1_Java란_무엇인가.md)
+-   [1.2. JDK 설치 및 IDE 사용 가이드](./01_Java_소개_및_환경_설정/1.2_JDK_설치_및_IDE_사용가이드.md)
 
 ## 2. Java 기본 문법
 -   [2.1. 변수와 자료형](./02_Java_기본_문법/2.1_변수와_데이터_타입.md)
@@ -15,17 +12,17 @@
 -   [2.5. 배열](./02_Java_기본_문법/2.5_배열.md)
 
 ## 3. Java의 핵심 기본 API
--   3.1. `String` 클래스**: 문자열 생성, 비교, 주요 메서드
--   3.2. `java.util.Scanner`**: 사용자 콘솔 입력 처리
--   3.3. **Wrapper 클래스**: 기본형 타입을 객체로 다루기 (`Integer`, `Double` 등)
--   3.4. `Math` 클래스**: 수학적 계산 기능
+-   [3.1. String 클래스](./03_Java의_핵심_기본_API/3.1_String_클래스.md): 문자열 생성, 비교, 주요 메서드
+-   [3.2. Scanner 클래스](./03_Java의_핵심_기본_API/3.2_Scanner_클래스.md): 사용자 콘솔 입력 처리
+-   [3.3. Wrapper 클래스](./03_Java의_핵심_기본_API/3.3_Wrapper_클래스.md): 기본형 타입을 객체로 다루기 (`Integer`, `Double` 등)
+-   [3.4. Math 클래스](./03_Java의_핵심_기본_API/3.4_Math_클래스.md): 수학적 계산 기능
 
 ## 4. 객체 지향 프로그래밍 (OOP) - Part 1: 기본
--   4.1. 클래스와 객체
--   4.2. 필드, 메서드, 생성자
--   4.3. 패키지와 import
--   4.4. 접근 제어자
--   4.5. `static`과 `final` 키워드
+-   [4.1. 클래스와 객체](./04_객체_지향_프로그래밍_OOP_Part1/4.1_클래스와_객체.md)
+-   [4.2. 필드, 메서드, 생성자](./04_객체_지향_프로그래밍_OOP_Part1/4.2_필드_메서드_생성자.md)
+-   [4.3. 패키지와 import](./04_객체_지향_프로그래밍_OOP_Part1/4.3_패키지와_import.md)
+-   [4.4. 접근 제어자](./04_객체_지향_프로그래밍_OOP_Part1/4.4_접근_제어자.md)
+-   [4.5. `static`과 `final` 키워드](./04_객체_지향_프로그래밍_OOP_Part1/4.5_static과_final_키워드.md)
 -   4.6. *[실습] 클래스와 접근 제어자*
 
 ## 5. 객체 지향 프로그래밍 (OOP) - Part 2: 핵심 개념
