--- a/목차.md
+++ b/목차.md
@@ -26,31 +26,31 @@
 -   4.6. *[실습] 클래스와 접근 제어자*
 
 ## 5. 객체 지향 프로그래밍 (OOP) - Part 2: 핵심 개념
--   5.1. 상속과 `super`
--   5.2. 다형성과 메서드 오버라이딩
--   5.3. 추상 클래스와 인터페이스
--   5.4. 컴포지션
--   5.5. *[실습] 상속, 추상 클래스, 인터페이스 활용*
+-   [5.1. 상속과 `super`](./05_객체_지향_프로그래밍_OOP_Part2/5.1_상속과_super.md)
+-   [5.2. 다형성과 메서드 오버라이딩](./05_객체_지향_프로그래밍_OOP_Part2/5.2_다형성과_메서드_오버라이딩.md)
+-   [5.3. 추상 클래스와 인터페이스](./05_객체_지향_프로그래밍_OOP_Part2/5.3_추상_클래스와_인터페이스.md)
+-   [5.4. 컴포지션](./05_객체_지향_프로그래밍_OOP_Part2/5.4_컴포지션.md)
+-   [5.5. 실습: OOP Part 2 종합](./05_객체_지향_프로그래밍_OOP_Part2/5.5_실습.md)
 
 ## 6. 객체 지향 설계 원칙
--   6.1. 객체지향의 4가지 특징 정리
--   6.2. SOLID 원칙 소개
+-   [6.1. 객체지향의 4가지 특징 정리](./06_객체_지향_설계_원칙/6.1_객체지향의_4가지_특징_정리.md)
+-   [6.2. SOLID 원칙 소개](./06_객체_지향_설계_원칙/6.2_SOLID_원칙_소개.md)
 
 ## 7. Java 고급 문법 및 API
--   7.1. 제네릭
--   7.2. 컬렉션 프레임워크 (`List`, `Set`, `Map`)
--   7.3. 열거형 (Enum)
--   7.4. 어노테이션 소개
--   7.5. *[실습] 컬렉션 프레임워크 활용*
+-   [7.1. 제네릭](./07_Java_고급_문법_및_API/7.1_제네릭.md)
+-   [7.2. 컬렉션 프레임워크 (`List`, `Set`, `Map`)](./07_Java_고급_문법_및_API/7.2_컬렉션_프레임워크.md)
+-   [7.3. 열거형 (Enum)](./07_Java_고급_문법_및_API/7.3_열거형_Enum.md)
+-   [7.4. 어노테이션 소개](./07_Java_고급_문법_및_API/7.4_어노테이션_소개.md)
+-   [7.5. 실습: Java 고급 문법 종합](./07_Java_고급_문법_및_API/7.5_실습.md)
 
 ## 8. Modern Java (함수형 프로그래밍)
--   8.1. 함수형 인터페이스와 람다 표현식
--   8.2. 스트림 (Stream) API
--   8.3. *[실습] 람다와 스트림 활용*
+-   [8.1. 함수형 인터페이스와 람다 표현식](./08_Modern_Java/8.1_함수형_인터페이스와_람다_표현식.md)
+-   [8.2. 스트림 (Stream) API](./08_Modern_Java/8.2_스트림_API.md)
+-   [8.3. 실습: 람다와 스트림 활용](./08_Modern_Java/8.3_실습.md)
 
 ## 9. 예외 처리
--   9.1. 예외(Exception)란 무엇인가?
--   9.2. `try-catch-finally`를 이용한 예외 처리
+-   [9.1. 예외(Exception)란 무엇인가?](./09_예외_처리/9.1_예외_Exception란_무엇인가.md)
+-   [9.2. try-catch-finally를 이용한 예외 처리](./09_예외_처리/9.2_try_catch_finally를_이용한_예외_처리.md)
 
 ## 10. 미니 프로젝트
 -   10.1. 콘솔 기반 간단한 애플리케이션 만들기
