--- a/목차.md
+++ b/목차.md
@@ -53,4 +53,6 @@
 -   [9.2. try-catch-finally를 이용한 예외 처리](./09_예외_처리/9.2_try_catch_finally를_이용한_예외_처리.md)
 
 ## 10. 미니 프로젝트
--   10.1. 콘솔 기반 간단한 애플리케이션 만들기
+-   [10.1. 숫자 야구 게임](./10_미니_프로젝트/10.1_숫자_야구_게임.md): 배열, 반복문, 조건문 활용 게임
+-   [10.2. 로또 번호 생성기](./10_미니_프로젝트/10.2_로또_번호_생성기.md): Set 컬렉션, Stream API, Enum 활용
+-   [10.3. 도서 관리 시스템](./10_미니_프로젝트/10.3_도서_관리_시스템.md): 객체 지향 프로그래밍 종합 실습
