--- a/database/01_데이터베이스_기초/1.1_데이터베이스란_무엇인가.md
+++ b/database/01_데이터베이스_기초/1.1_데이터베이스란_무엇인가.md
@@ -159,7 +159,7 @@ DBMS = 사서 (책을 관리하고 찾아주는 사람)
 ### 기본키 (Primary Key)
 각 행을 고유하게 식별할 수 있는 열입니다.
 ```
-예: 학번 (2024001은 전 세계에서 단 하나만 존재)
+예: 학번 (2024001은 단 하나만 존재)
 ```
 
 ---
@@ -213,71 +213,6 @@ DBMS = 사서 (책을 관리하고 찾아주는 사람)
 |----------|----------|--------|------|------|
 | 1 | 1001 | 노트북 | 1 | 50000 |
 | 2 | 1002 | 키보드 | 2 | 15000 |
-
----
-
-## 7. 데이터베이스 사용 시나리오
-
-### 시나리오: 학생 성적 관리 프로그램
-
-**요구사항**
-1. 학생 정보를 저장하고 조회
-2. 과목별 성적을 기록
-3. 학생별 평균 성적 계산
-4. 특정 조건으로 학생 검색 (예: 평균 90점 이상)
-
-**데이터베이스 없이 구현하면?**
-```java
-// 파일로 저장하고 읽어야 함
-// 검색할 때마다 전체 파일을 읽어야 함
-// 동시에 여러 명이 수정하면 문제 발생
-```
-
-**데이터베이스를 사용하면?**
-```sql
--- 학생 추가
-INSERT INTO students VALUES (2024001, '홍길동', 20);
-
--- 학생 검색
-SELECT * FROM students WHERE name = '홍길동';
-
--- 평균 90점 이상 학생 조회
-SELECT * FROM students WHERE avg_score >= 90;
-```
-→ 간단한 명령어로 빠르고 안전하게 처리
-
----
-
-## 실습 문제
-
-### 문제 1: 데이터와 정보 구분하기
-
-다음 중 **데이터**와 **정보**를 구분하세요.
-
-```
-1. '25'
-2. '홍길동 학생은 25세입니다'
-3. '컴퓨터공학'
-4. '재고가 10개 남았습니다'
-```
-
-**답**:
-- 데이터: 1, 3
-- 정보: 2, 4
-
-### 문제 2: 파일 시스템의 문제점 찾기
-
-다음 상황에서 어떤 문제가 발생할까요?
-
-**상황**:
-```
-학생정보.txt: 홍길동, 010-1111-1111
-수강정보.txt: 홍길동, 010-2222-2222, 자바
-```
-
-홍길동의 전화번호가 바뀌어 `학생정보.txt`만 수정했습니다.
-
-**질문**: 어떤 문제가 발생하나요?
 
 ---
 
