--- a/database/02_데이터베이스_설계/2.1_ERD_작성.md
+++ b/database/02_데이터베이스_설계/2.1_ERD_작성.md
@@ -203,24 +203,21 @@ O  : 선택 (Optional, NULL 가능)
 
 ### 추천 도구
 
-1. **MySQL Workbench** (무료)
+1. **MySQL Workbench** 
    - MySQL 설치 시 함께 제공
    - ERD 자동 생성 및 DB 연동 가능
    - [공식 가이드](https://dev.mysql.com/doc/workbench/en/)
 
-2. **draw.io (diagrams.net)** (무료)
+2. **draw.io (diagrams.net)**
    - 웹 브라우저에서 바로 사용
    - 다양한 도형과 템플릿 제공
    - https://app.diagrams.net/
 
-3. **ERDCloud** (무료)
+3. **ERDCloud**
    - 한국어 지원
    - 간단한 인터페이스
    - https://www.erdcloud.com/
 
-4. **Lucidchart** (유료, 무료 체험 가능)
-   - 협업 기능 강력
-   - 프로페셔널한 디자인
 
 ### MySQL Workbench에서 ERD 생성하기
 
