--- a/database/03_SQL_기초/3.9_실습_프로젝트.md
+++ b/database/03_SQL_기초/3.9_실습_프로젝트.md
@@ -1,4 +1,4 @@
-# 3.6. 실습: SQL 기초 종합 프로젝트
+# 3.9. 실습: SQL 기초 종합 프로젝트
 
 > SQL 기초 문법을 종합하여 실전 데이터베이스를 설계하고 쿼리를 작성할 수 있다.
 
@@ -382,18 +382,20 @@ LIMIT 3;
 #### 연습 24: 고가 상품 목록
 
 ```sql
--- 각 카테고리에서 가장 비싼 상품
+-- 100만원 이상 고가 상품을 가격대별로 분류
 SELECT
-    category AS 카테고리,
     product_name AS 상품명,
-    price AS 가격
-FROM products p1
-WHERE price = (
-    SELECT MAX(price)
-    FROM products p2
-    WHERE p1.category = p2.category
-)
-ORDER BY category;
+    category AS 카테고리,
+    price AS 가격,
+    CASE
+        WHEN price >= 2000000 THEN '최고가'
+        WHEN price >= 1000000 THEN '고가'
+        WHEN price >= 500000 THEN '중고가'
+        ELSE '일반'
+    END AS 가격등급
+FROM products
+WHERE price >= 100000
+ORDER BY price DESC;
 ```
 
 #### 연습 25: 월별 등록 상품 수
