--- a/database/목차.md
+++ b/database/목차.md
@@ -7,59 +7,57 @@
 - [1.4. 개발 환경 설정](./01_데이터베이스_기초/1.4_개발_환경_설정.md)
 
 ## 2. 데이터베이스 설계
-- 2.1. ERD (Entity Relationship Diagram) 작성
-- 2.2. 테이블 관계 설정 (1:1, 1:N, N:M)
-- 2.3. 정규화 - 1NF, 2NF, 3NF
-- 2.4. 정규화 - BCNF와 역정규화
-- 2.5. 제약 조건 (PRIMARY KEY, FOREIGN KEY, UNIQUE, NOT NULL)
-- 2.6. 실습: 데이터베이스 설계 프로젝트
+- [2.1. ERD (Entity Relationship Diagram) 작성](./02_데이터베이스_설계/2.1_ERD_작성.md)
+- [2.2. 테이블 관계 설정 (1:1, 1:N, N:M)](./02_데이터베이스_설계/2.2_테이블_관계_설정.md)
+- [2.3. 정규화 - 1NF, 2NF, 3NF](./02_데이터베이스_설계/2.3_정규화_1NF_2NF_3NF.md)
+- [2.4. 정규화 - BCNF와 역정규화](./02_데이터베이스_설계/2.4_BCNF와_역정규화.md)
+- [2.5. 실습: 데이터베이스 설계 프로젝트](./02_데이터베이스_설계/2.5_실습_프로젝트.md)
 
 ## 3. SQL 기초
-- 3.1. DDL (CREATE, ALTER, DROP)
-- 3.2. DML (INSERT, UPDATE, DELETE)
-- 3.3. DQL - SELECT 기본
-- 3.4. WHERE 절과 조건 연산자
-- 3.5. ORDER BY와 정렬
-- 3.6. 집계 함수 (COUNT, SUM, AVG, MAX, MIN)
-- 3.7. GROUP BY와 HAVING
-- 3.8. 실습: SQL 기초 종합
+- [3.1. DDL (CREATE, ALTER, DROP)](./03_SQL_기초/3.1_DDL.md)
+- [3.2. DML (INSERT, UPDATE, DELETE)](./03_SQL_기초/3.2_DML.md)
+- [3.3. SELECT 기본 문법 (DQL)](./03_SQL_기초/3.3_SELECT_기본_문법.md)
+- [3.4. WHERE절과 조건 연산자](./03_SQL_기초/3.4_WHERE절과_조건_연산자.md)
+- [3.5. 정렬과 제한 (ORDER BY, LIMIT)](./03_SQL_기초/3.5_정렬과_제한.md)
+- [3.6. 집계 함수 (COUNT, SUM, AVG, MAX, MIN)](./03_SQL_기초/3.6_집계_함수.md)
+- [3.7. GROUP BY와 HAVING](./03_SQL_기초/3.7_GROUP_BY와_HAVING.md)
+- [3.8. CASE 조건문](./03_SQL_기초/3.8_CASE_조건문.md)
+- [3.9. 실습: SQL 기초 종합](./03_SQL_기초/3.9_실습_프로젝트.md)
 
 ## 4. SQL 고급
-- 4.1. JOIN - INNER JOIN
-- 4.2. JOIN - OUTER JOIN (LEFT, RIGHT, FULL)
-- 4.3. CROSS JOIN과 SELF JOIN
-- 4.4. 서브쿼리 (Subquery)
-- 4.5. 인덱스(Index)의 이해
-- 4.6. 쿼리 성능 최적화
-- 4.7. 뷰(View)
-- 4.8. 저장 프로시저(Stored Procedure)
-- 4.9. 실습: SQL 고급 종합
+- [4.1. JOIN (INNER, OUTER, CROSS, SELF)](./04_SQL_고급/4.1_JOIN.md)
+- [4.2. 서브쿼리 (Subquery)](./04_SQL_고급/4.2_서브쿼리.md)
+- [4.3. 인덱스(Index)의 이해](./04_SQL_고급/4.3_인덱스.md)
+- [4.4. 쿼리 성능 최적화](./04_SQL_고급/4.4_쿼리_성능_최적화.md)
+- [4.5. 뷰(View)](./04_SQL_고급/4.5_뷰.md)
+- [4.6. 저장 프로시저(Stored Procedure)](./04_SQL_고급/4.6_저장_프로시저.md)
+- [4.7. 실습: SQL 고급 종합](./04_SQL_고급/4.7_실습_프로젝트.md)
 
 ## 5. 트랜잭션과 동시성
-- 5.1. 트랜잭션(Transaction)이란?
-- 5.2. ACID 속성
-- 5.3. COMMIT과 ROLLBACK
-- 5.4. 트랜잭션 격리 수준 (Isolation Level)
-- 5.5. 락(Lock)과 동시성 제어
-- 5.6. 데드락(Deadlock) 이해와 예방
-- 5.7. 실습: 트랜잭션 실습
+- [5.1. 트랜잭션(Transaction)이란?](./05_트랜잭션과_동시성/5.1_트랜잭션이란.md)
+- [5.2. ACID 속성](./05_트랜잭션과_동시성/5.2_ACID_속성.md)
+- [5.3. COMMIT과 ROLLBACK](./05_트랜잭션과_동시성/5.3_COMMIT과_ROLLBACK.md)
+- [5.4. 트랜잭션 격리 수준 (Isolation Level)](./05_트랜잭션과_동시성/5.4_트랜잭션_격리_수준.md)
+- [5.5. 락(Lock)과 동시성 제어](./05_트랜잭션과_동시성/5.5_락과_동시성_제어.md)
+- [5.6. 데드락(Deadlock) 이해와 예방](./05_트랜잭션과_동시성/5.6_데드락.md)
+- [5.7. 실습: 트랜잭션 실습](./05_트랜잭션과_동시성/5.7_실습_프로젝트.md)
 
 ## 6. NoSQL 데이터베이스
-- 6.1. NoSQL이란? SQL과의 차이점
-- 6.2. MongoDB 설치 및 기본 명령어
-- 6.3. MongoDB CRUD 작업
-- 6.4. MongoDB 쿼리와 인덱스
-- 6.5. SQL vs NoSQL 선택 기준
-- 6.6. 실습: MongoDB 실습
+- [6.1. NoSQL이란? SQL과의 차이점](./06_NoSQL_데이터베이스/6.1_NoSQL이란.md)
+- [6.2. MongoDB 설치 및 기본 명령어](./06_NoSQL_데이터베이스/6.2_MongoDB_설치_및_기본_명령어.md)
+- [6.3. MongoDB CRUD 작업](./06_NoSQL_데이터베이스/6.3_MongoDB_CRUD_작업.md)
+- [6.4. MongoDB 쿼리와 인덱스](./06_NoSQL_데이터베이스/6.4_MongoDB_쿼리와_인덱스.md)
+- [6.5. SQL vs NoSQL 선택 기준](./06_NoSQL_데이터베이스/6.5_SQL_vs_NoSQL_선택_기준.md)
+- [6.6. 실습: MongoDB 실습](./06_NoSQL_데이터베이스/6.6_실습_프로젝트.md)
 
 ## 7. 실전 프로젝트
-- 7.1. 프로젝트 소개: 쇼핑몰 데이터베이스
-- 7.2. 데이터베이스 설계 (ERD 작성)
-- 7.3. 테이블 생성 및 샘플 데이터 삽입
-- 7.4. 애플리케이션과 DB 연동 (Java/Node.js)
-- 7.5. 복잡한 쿼리 작성 실습
-- 7.6. 성능 최적화 및 인덱스 적용
-- 7.7. 프로젝트 마무리 및 발표
+- [7.1. 프로젝트 소개: 쇼핑몰 데이터베이스](./07_실전_프로젝트/7.1_프로젝트_소개.md)
+- [7.2. 데이터베이스 설계 (ERD 작성)](./07_실전_프로젝트/7.2_데이터베이스_설계.md)
+- [7.3. 테이블 생성 및 샘플 데이터 삽입](./07_실전_프로젝트/7.3_테이블_생성_및_데이터_삽입.md)
+- [7.4. 애플리케이션과 DB 연동 (Java/Node.js)](./07_실전_프로젝트/7.4_애플리케이션_연동.md)
+- [7.5. 복잡한 쿼리 작성 실습](./07_실전_프로젝트/7.5_복잡한_쿼리_작성.md)
+- [7.6. 성능 최적화 및 인덱스 적용](./07_실전_프로젝트/7.6_성능_최적화.md)
+- [7.7. 프로젝트 마무리 및 발표](./07_실전_프로젝트/7.7_프로젝트_마무리.md)
 
 ---
 
