--- a/database/03_SQL_기초/3.2_DML.md
+++ b/database/03_SQL_기초/3.2_DML.md
@@ -1,41 +1,31 @@
-# 3.4. INSERT, UPDATE, DELETE
+# 3.2. DML (INSERT, UPDATE, DELETE)
 
-> INSERT, UPDATE, DELETE 문을 사용하여 데이터를 추가, 수정, 삭제할 수 있다.
+> DML(Data Manipulation Language)을 사용하여 데이터를 추가, 수정, 삭제할 수 있다.
 
 ---
 
-## 1. 실습용 테이블 생성
+## 실습 준비
 
-sakila DB의 원본 데이터를 보호하기 위해 별도 테이블을 생성합니다.
+이 섹션에서는 **3.1에서 생성한 test_db**를 사용합니다.
 
 ```sql
--- 테스트 데이터베이스 생성
-CREATE DATABASE IF NOT EXISTS test_db;
 USE test_db;
-
--- 고객 테스트 테이블
-CREATE TABLE customers (
-    customer_id INT PRIMARY KEY AUTO_INCREMENT,
-    first_name VARCHAR(50) NOT NULL,
-    last_name VARCHAR(50) NOT NULL,
-    email VARCHAR(100) UNIQUE,
-    active BOOLEAN DEFAULT TRUE,
-    create_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-);
 ```
+
+**참고:** test_db와 customers 테이블은 3.1 DDL 섹션에서 이미 생성했습니다.
 
 ---
 
-## 2. INSERT: 데이터 추가
+## 1. INSERT: 데이터 추가
 
-### 2.1. 기본 문법
+### 1.1. 기본 문법
 
 ```sql
 INSERT INTO 테이블명 (컬럼1, 컬럼2, ...)
 VALUES (값1, 값2, ...);
 ```
 
-### 2.2. 단일 행 삽입
+### 1.2. 단일 행 삽입
 
 ```sql
 -- 새 고객 추가
@@ -46,7 +36,7 @@ VALUES ('John', 'Doe', 'john.doe@email.com');
 SELECT * FROM customers WHERE customer_id = LAST_INSERT_ID();
 ```
 
-### 2.3. 여러 행 한 번에 삽입
+### 1.3. 여러 행 한 번에 삽입
 
 ```sql
 INSERT INTO customers (first_name, last_name, email) VALUES
@@ -60,9 +50,9 @@ SELECT * FROM customers;
 
 ---
 
-## 3. UPDATE: 데이터 수정
+## 2. UPDATE: 데이터 수정
 
-### 3.1. 기본 문법
+### 2.1. 기본 문법
 
 ```sql
 UPDATE 테이블명
@@ -72,7 +62,7 @@ WHERE 조건;
 
 ⚠️ **중요**: `WHERE` 절을 **반드시** 지정하세요!
 
-### 3.2. 단일 컬럼 수정
+### 2.2. 단일 컬럼 수정
 
 ```sql
 -- John Doe의 이메일 변경
@@ -84,7 +74,7 @@ WHERE first_name = 'John' AND last_name = 'Doe';
 SELECT * FROM customers WHERE first_name = 'John';
 ```
 
-### 3.3. 여러 컬럼 동시 수정
+### 2.3. 여러 컬럼 동시 수정
 
 ```sql
 -- Jane Smith의 정보 변경
@@ -96,9 +86,9 @@ WHERE first_name = 'Jane' AND last_name = 'Smith';
 
 ---
 
-## 4. DELETE: 데이터 삭제
+## 3. DELETE: 데이터 삭제
 
-### 4.1. 기본 문법
+### 3.1. 기본 문법
 
 ```sql
 DELETE FROM 테이블명
@@ -107,7 +97,7 @@ WHERE 조건;
 
 ⚠️ **중요**: `WHERE` 절 없으면 **모든 데이터가 삭제**됩니다!
 
-### 4.2. 조건에 맞는 행 삭제
+### 3.2. 조건에 맞는 행 삭제
 
 ```sql
 -- Mike Johnson 삭제
@@ -120,63 +110,9 @@ SELECT * FROM customers;
 
 ---
 
-## 5. sakila DB 실습 (읽기 전용)
+## 4. 안전한 DML 사용법
 
-sakila DB의 실제 데이터로 조회 연습을 합니다.
-
-### 5.1. 영화 정보 조회
-
-```sql
-USE sakila;
-
--- 모든 영화 조회 (상위 10개)
-SELECT film_id, title, release_year, rental_rate
-FROM film
-LIMIT 10;
-
--- 특정 등급의 영화
-SELECT title, rating, length
-FROM film
-WHERE rating = 'PG'
-LIMIT 10;
-
--- 대여료가 비싼 영화 TOP 10
-SELECT title, rental_rate, replacement_cost
-FROM film
-ORDER BY rental_rate DESC
-LIMIT 10;
-```
-
-### 5.2. 배우 정보 조회
-
-```sql
--- 모든 배우 조회 (상위 10개)
-SELECT actor_id, first_name, last_name
-FROM actor
-LIMIT 10;
-
--- 이름이 'A'로 시작하는 배우
-SELECT first_name, last_name
-FROM actor
-WHERE first_name LIKE 'A%'
-ORDER BY first_name;
-```
-
-### 5.3. 카테고리별 영화 수
-
-```sql
-SELECT name AS category, COUNT(*) AS film_count
-FROM category c
-JOIN film_category fc ON c.category_id = fc.category_id
-GROUP BY c.category_id, c.name
-ORDER BY film_count DESC;
-```
-
----
-
-## 6. 안전한 DML 사용법
-
-### 6.1. 항상 SELECT로 먼저 확인
+### 4.1. 항상 SELECT로 먼저 확인
 
 ```sql
 -- 1단계: 어떤 데이터가 영향받을지 먼저 조회
@@ -186,7 +122,7 @@ SELECT * FROM customers WHERE active = FALSE;
 DELETE FROM customers WHERE active = FALSE;
 ```
 
-### 6.2. 트랜잭션 사용 (권장)
+### 4.2. 트랜잭션 사용 (권장)
 
 ```sql
 -- 트랜잭션 시작
@@ -242,28 +178,6 @@ SELECT * FROM customers WHERE active = FALSE;
 
 -- 2. 삭제
 DELETE FROM customers WHERE active = FALSE;
-```
-
-### 문제 4: sakila DB 조회
-
-sakila DB에서 다음을 조회하세요.
-
-1. 등급이 'R'인 영화 10개
-2. 대여료가 4.99 이상인 영화 제목과 가격
-3. 상영 시간이 120분 이상인 영화 수
-
-**예상 답**:
-```sql
-USE sakila;
-
--- 1
-SELECT title, rating FROM film WHERE rating = 'R' LIMIT 10;
-
--- 2
-SELECT title, rental_rate FROM film WHERE rental_rate >= 4.99;
-
--- 3
-SELECT COUNT(*) FROM film WHERE length >= 120;
 ```
 
 ---
