--- a/database/목차.md
+++ b/database/목차.md
@@ -59,6 +59,14 @@
 - [7.6. 성능 최적화 및 인덱스 적용](./07_실전_프로젝트/7.6_성능_최적화.md)
 - [7.7. 프로젝트 마무리 및 발표](./07_실전_프로젝트/7.7_프로젝트_마무리.md)
 
+## 8. AI를 활용한 SQL 쿼리 작성
+- [8.1. AI 도구 소개와 활용 배경](./08_AI를_활용한_SQL_쿼리_작성/8.1_AI_도구_소개와_활용_배경.md)
+- [8.2. AI에게 효과적으로 SQL 요청하기](./08_AI를_활용한_SQL_쿼리_작성/8.2_AI에게_효과적으로_SQL_요청하기.md)
+- [8.3. AI 생성 쿼리 검증 및 수정](./08_AI를_활용한_SQL_쿼리_작성/8.3_AI_생성_쿼리_검증_및_수정.md)
+- [8.4. 복잡한 쿼리를 AI와 함께 작성하기](./08_AI를_활용한_SQL_쿼리_작성/8.4_복잡한_쿼리를_AI와_함께_작성하기.md)
+- [8.5. AI 활용 시 주의사항과 한계](./08_AI를_활용한_SQL_쿼리_작성/8.5_AI_활용_시_주의사항과_한계.md)
+- [8.6. 실습: AI와 함께 쿼리 작성하기](./08_AI를_활용한_SQL_쿼리_작성/8.6_실습_AI와_함께_쿼리_작성하기.md)
+
 ---
 
 ## 부록
